@@ -2,7 +2,6 @@ package ti4.commands.help;
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
-
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import ti4.ResourceHelper;
@@ -20,10 +19,10 @@ public class HowToPlayTI4 extends Subcommand {
         howToPlayTI4(event);
     }
 
-    public static void howToPlayTI4(GenericInteractionCreateEvent event) {
+    private static void howToPlayTI4(GenericInteractionCreateEvent event) {
         String path = ResourceHelper.getInstance().getHelpFile("HowToPlayTI4.txt");
         try {
-            String message = new String(Files.readAllBytes(Paths.get(path)));
+            String message = Files.readString(Paths.get(path));
             MessageHelper.sendMessageToEventChannel(event, message);
         } catch (Exception e) {
             MessageHelper.sendMessageToEventChannel(event, "TI4 HELP FILE IS BLANK");
