@@ -1,13 +1,6 @@
 package ti4.image;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Graphics;
-import java.awt.Graphics2D;
-import java.awt.Point;
-import java.awt.Rectangle;
-import java.awt.RenderingHints;
-import java.awt.Stroke;
+import java.awt.*;
 import java.awt.color.ColorSpace;
 import java.awt.image.BufferedImage;
 import java.awt.image.ColorConvertOp;
@@ -22,14 +15,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-
+import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
+import net.dv8tion.jda.api.utils.FileUpload;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.StopWatch;
 import org.jetbrains.annotations.Nullable;
-
-import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
-import net.dv8tion.jda.api.utils.FileUpload;
 import ti4.ResourceHelper;
 import ti4.commands.CommandHelper;
 import ti4.helpers.ButtonHelper;
@@ -47,8 +38,9 @@ import ti4.map.Planet;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
-import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
+import ti4.message.logging.LogOrigin;
 import ti4.model.AgendaModel;
 import ti4.model.BorderAnomalyHolder;
 import ti4.model.ColorModel;
@@ -59,8 +51,8 @@ import ti4.model.StrategyCardModel;
 import ti4.service.fow.UserOverridenGenericInteractionCreateEvent;
 import ti4.service.image.FileUploadService;
 import ti4.settings.GlobalSettings;
-import ti4.website.WebHelper;
-import ti4.website.WebsiteOverlay;
+import ti4.website.AsyncTi4WebsiteHelper;
+import ti4.website.model.WebsiteOverlay;
 
 public class MapGenerator implements AutoCloseable {
 
@@ -123,19 +115,18 @@ public class MapGenerator implements AutoCloseable {
         // Get a control token to calculate needed width of objectives later based on number of players
         String controlID = Mapper.getControlID("red");
         BufferedImage bufferedImage = ImageHelper.readScaled(Mapper.getCCPath(controlID), 0.45f);
-        if (bufferedImage != null)
-            scoreTokenSpacing = bufferedImage.getWidth() + 6;
-        else
-            scoreTokenSpacing = 30;
+        if (bufferedImage != null) scoreTokenSpacing = bufferedImage.getWidth() + 6;
+        else scoreTokenSpacing = 30;
 
         // Height of objectives section (=0 when there is 5 or less objectives in the column with most objectives)
         int stage1PublicObjCount = (int) game.getRevealedPublicObjectives().keySet().stream()
-            .filter(Mapper.getPublicObjectivesStage1()::containsKey)
-            .count();
+                .filter(Mapper.getPublicObjectivesStage1()::containsKey)
+                .count();
         int stage2PublicObjCount = (int) game.getRevealedPublicObjectives().keySet().stream()
-            .filter(Mapper.getPublicObjectivesStage2()::containsKey)
-            .count();
+                .filter(Mapper.getPublicObjectivesStage2()::containsKey)
+                .count();
         int otherObjCount = game.getRevealedPublicObjectives().size() - stage1PublicObjCount - stage2PublicObjCount;
+        otherObjCount = Math.max(Objective.retrieveCustom(game).size(), otherObjCount);
         stage1PublicObjCount = game.getPublicObjectives1Peakable().size() + stage1PublicObjCount;
         stage2PublicObjCount = game.getPublicObjectives2Peakable().size() + stage2PublicObjCount;
         int mostObjectivesInAColumn = Math.max(Math.max(stage1PublicObjCount, stage2PublicObjCount), otherObjCount);
@@ -143,7 +134,11 @@ public class MapGenerator implements AutoCloseable {
 
         // Height of sections of players stats and agendas/events in play and objectives
         int playerCountForMap = game.getRealPlayers().size() + game.getDummies().size();
-        int heightOfPlayerAreasSection = getHeightOfPlayerAreasSection(game, playerCountForMap, heightOfObjectivesSection);
+        if (game.getRealPlayers().size() > game.getRealPlayersNNeutral().size()) {
+            playerCountForMap--;
+        }
+        int heightOfPlayerAreasSection =
+                getHeightOfPlayerAreasSection(game, playerCountForMap, heightOfObjectivesSection);
 
         // Height of map section
         int mapHeight = getMapHeight(game);
@@ -197,7 +192,7 @@ public class MapGenerator implements AutoCloseable {
 
     /**
      * Returns the height for the sections Objectives (above 5) + Laws + Events + Players + idk what EXTRA_Y is for
-    */
+     */
     private static int getHeightOfPlayerAreasSection(Game game, int playerCountForMap, int objectivesY) {
         final int typicalPlayerAreaHeight = 340;
         final int unrealPlayerHeight = 35;
@@ -234,8 +229,7 @@ public class MapGenerator implements AutoCloseable {
         game.incrementMapImageGenerationCount();
         FileUpload fileUpload = FileUploadService.createFileUpload(mainImageBytes, game.getName());
         if (debug) debugDiscordTime.stop();
-        if (debug && !WebHelper.sendingToWeb())
-            FileUploadService.saveLocalPng(mainImage, "MapDebug");
+        if (debug && !AsyncTi4WebsiteHelper.uploadsEnabled()) FileUploadService.saveLocalPng(mainImage, "MapDebug");
         return fileUpload;
     }
 
@@ -293,10 +287,11 @@ public class MapGenerator implements AutoCloseable {
 
         tileMap.remove(null);
         Set<String> tiles = tileMap.keySet();
-        Set<String> tilesWithExtra = new HashSet<>(game.getAdjacentTileOverrides().values());
+        Set<String> tilesWithExtra =
+                new HashSet<>(game.getAdjacentTileOverrides().values());
         tilesWithExtra.addAll(game.getBorderAnomalies().stream()
-            .map(BorderAnomalyHolder::getTile)
-            .collect(Collectors.toSet()));
+                .map(BorderAnomalyHolder::getTile)
+                .collect(Collectors.toSet()));
 
         tiles.stream().sorted().forEach(key -> addTile(tileMap.get(key), TileStep.Tile));
         tilesWithExtra.forEach(key -> addTile(tileMap.get(key), TileStep.Extras));
@@ -334,7 +329,8 @@ public class MapGenerator implements AutoCloseable {
         isFoWPrivate = true;
         // IMPORTANT NOTE : This method used to be local and was refactored to extract
         // any references to tilesToDisplay
-        fowPlayer = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
+        fowPlayer = CommandHelper.getPlayerFromGame(
+                game, event.getMember(), event.getUser().getId());
 
         Set<String> tilesToShow = FoWHelper.fowFilter(game, fowPlayer);
         Set<String> keys = new HashSet<>(tilesToDisplay.keySet());
@@ -351,8 +347,10 @@ public class MapGenerator implements AutoCloseable {
     }
 
     private boolean isFowModeActive() {
-        return game.isFowMode() && event != null &&
-            (FoWHelper.isPrivateGame(game, event) || event instanceof UserOverridenGenericInteractionCreateEvent);
+        return game.isFowMode()
+                && event != null
+                && (FoWHelper.isPrivateGame(game, event)
+                        || event instanceof UserOverridenGenericInteractionCreateEvent);
     }
 
     public boolean shouldConvertToGeneric(Player player) {
@@ -394,13 +392,14 @@ public class MapGenerator implements AutoCloseable {
     private void sendToWebsite() {
         String testing = System.getenv("TESTING");
         if (testing == null && displayTypeBasic == DisplayType.all && !isFoWPrivate) {
-            WebHelper.putMap(game.getName(), mainImageBytes, false, null);
-            WebHelper.putData(game.getName(), game);
-            WebHelper.putOverlays(game.getID(), websiteOverlays);
-            WebHelper.putPlayerData(game.getID(), game, globalUnitCoordinatesByFaction);
+            AsyncTi4WebsiteHelper.putMap(game.getName(), mainImageBytes, false, null);
+            AsyncTi4WebsiteHelper.putData(game.getName(), game);
+            AsyncTi4WebsiteHelper.putOverlays(game.getID(), websiteOverlays);
+            AsyncTi4WebsiteHelper.putPlayerData(game.getID(), game);
         } else if (isFoWPrivate) {
-            Player player = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
-            WebHelper.putMap(game.getName(), mainImageBytes, true, player);
+            Player player = CommandHelper.getPlayerFromGame(
+                    game, event.getMember(), event.getUser().getId());
+            AsyncTi4WebsiteHelper.putMap(game.getName(), mainImageBytes, true, player);
         }
     }
 
@@ -431,9 +430,7 @@ public class MapGenerator implements AutoCloseable {
         int deltaX = 0;
 
         Graphics2D g2 = (Graphics2D) graphics;
-        g2.setRenderingHint(
-            RenderingHints.KEY_TEXT_ANTIALIASING,
-            RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
+        g2.setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
 
         // GAME MODES
         int deltaY = -150;
@@ -442,7 +439,16 @@ public class MapGenerator implements AutoCloseable {
             TIGLRank rank = game.getMinimumTIGLRankAtGameStart();
             if (rank != null) {
                 graphics.setFont(Storage.getFont18());
-                DrawingUtil.superDrawString(graphics, rank.getShortName(), x + deltaX + 50, y + deltaY + 75, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Top, stroke2, Color.BLACK);
+                DrawingUtil.superDrawString(
+                        graphics,
+                        rank.getShortName(),
+                        x + deltaX + 50,
+                        y + deltaY + 75,
+                        Color.WHITE,
+                        HorizontalAlign.Center,
+                        VerticalAlign.Top,
+                        stroke2,
+                        Color.BLACK);
                 graphics.setFont(Storage.getFont32());
             }
             deltaX += 100;
@@ -451,6 +457,11 @@ public class MapGenerator implements AutoCloseable {
             drawGeneralImage(x + deltaX, y + deltaY, "GameMode_Absol.png");
             addWebsiteOverlay("Absol", null, x + deltaX, y + deltaY, 90, 90);
             deltaX += 100;
+        }
+        if (game.isNoSwapMode()) {
+            drawGeneralImage(x + deltaX, y + deltaY, "NoSwap.png");
+            addWebsiteOverlay("No Support Swap", null, x + deltaX, y + deltaY, 180, 90);
+            deltaX += 190;
         }
         if (game.isMiltyModMode()) {
             drawGeneralImage(x + deltaX, y + deltaY, "GameMode_MiltyMod.png");
@@ -465,7 +476,7 @@ public class MapGenerator implements AutoCloseable {
         // GAME FUN NAME
         deltaY = 35;
         deltaY = 35;
-        y += 40; //needed for ghost HS on br
+        y += 40; // needed for ghost HS on br
         graphics.setFont(Storage.getFont50());
         graphics.setColor(Color.WHITE);
         graphics.drawString(game.getCustomName(), landscapeShift, y);
@@ -508,13 +519,8 @@ public class MapGenerator implements AutoCloseable {
         if (displayTypeBasic == DisplayType.all || displayTypeBasic == DisplayType.stats) {
             Point topLeft = new Point(x, y);
             new PlayerAreaGenerator(
-                graphics,
-                game,
-                isFoWPrivate,
-                fowPlayer,
-                websiteOverlays,
-                mapWidth,
-                scoreTokenSpacing).drawAllPlayerAreas(topLeft);
+                            graphics, game, isFoWPrivate, fowPlayer, websiteOverlays, mapWidth, scoreTokenSpacing)
+                    .drawAllPlayerAreas(topLeft);
         }
     }
 
@@ -544,11 +550,15 @@ public class MapGenerator implements AutoCloseable {
     }
 
     public enum HorizontalAlign {
-        Left, Center, Right
+        Left,
+        Center,
+        Right
     }
 
     public enum VerticalAlign {
-        Top, Center, Bottom
+        Top,
+        Center,
+        Bottom
     }
 
     private int drawScoreTrack(int y) {
@@ -560,7 +570,24 @@ public class MapGenerator implements AutoCloseable {
         int boxWidth = 150;
         int boxBuffer = -1;
         if (game.getVp() > 14) {
-            boxWidth = 120;
+            boxWidth = 2250 / (game.getVp() + 1);
+        }
+        if (game.isLiberationC4Mode()) {
+            for (int i = game.getVp() + 1; i <= 12; i++) {
+                graphics.setColor(Color.WHITE);
+                Rectangle rect = new Rectangle(i * boxWidth + landscapeShift, y, boxWidth, boxHeight);
+                DrawingUtil.drawCenteredString(g2, Integer.toString(i), rect, Storage.getFont50());
+                g2.setColor(Color.PINK);
+                g2.drawRect(i * boxWidth + landscapeShift, y, boxWidth, boxHeight);
+            }
+        } else if (game.isAllianceMode()) {
+            for (int i = game.getVp() + 1; i <= 14; i++) {
+                graphics.setColor(Color.WHITE);
+                Rectangle rect = new Rectangle(i * boxWidth + landscapeShift, y, boxWidth, boxHeight);
+                DrawingUtil.drawCenteredString(g2, Integer.toString(i), rect, Storage.getFont50());
+                g2.setColor(Color.PINK);
+                g2.drawRect(i * boxWidth + landscapeShift, y, boxWidth, boxHeight);
+            }
         }
         for (int i = 0; i <= game.getVp(); i++) {
             graphics.setColor(Color.WHITE);
@@ -588,7 +615,8 @@ public class MapGenerator implements AutoCloseable {
             for (Player player : playerChunk) {
                 try {
                     boolean convertToGeneric = isFoWPrivate && !FoWHelper.canSeeStatsOfPlayer(game, player, fowPlayer);
-                    String controlID = convertToGeneric ? Mapper.getControlID("gray") : Mapper.getControlID(player.getColor());
+                    String controlID =
+                            convertToGeneric ? Mapper.getControlID("gray") : Mapper.getControlID(player.getColor());
 
                     BufferedImage controlTokenImage = ImageHelper.readScaled(Mapper.getCCPath(controlID), scale);
                     int tokenWidth = controlTokenImage == null ? 51 : controlTokenImage.getWidth(); // 51
@@ -597,9 +625,21 @@ public class MapGenerator implements AutoCloseable {
                     int centreVertically = Math.max(0, (availableSpacePerRow - tokenHeight) / 2);
 
                     int vpCount = player.getTotalVictoryPoints();
-                    int tokenX = vpCount * boxWidth + Math.min(boxBuffer + (availableSpacePerColumn * col) + centreHorizontally, boxWidth - tokenWidth - boxBuffer) + landscapeShift;
+                    int tokenX = vpCount * boxWidth
+                            + Math.min(
+                                    boxBuffer + (availableSpacePerColumn * col) + centreHorizontally,
+                                    boxWidth - tokenWidth - boxBuffer)
+                            + landscapeShift;
                     int tokenY = y + boxBuffer + (availableSpacePerRow * row) + centreVertically;
-                    DrawingUtil.drawControlToken(graphics, controlTokenImage, DrawingUtil.getPlayerByControlMarker(game.getPlayers().values(), controlID), tokenX, tokenY, convertToGeneric, scale);
+                    DrawingUtil.drawControlToken(
+                            graphics,
+                            controlTokenImage,
+                            DrawingUtil.getPlayerByControlMarker(
+                                    game.getPlayers().values(), controlID),
+                            tokenX,
+                            tokenY,
+                            convertToGeneric,
+                            scale);
                 } catch (Exception e) {
                     // nothing
                     BotLogger.error("Could not display player: " + player.getUserName(), e);
@@ -623,7 +663,8 @@ public class MapGenerator implements AutoCloseable {
         int boxBuffer = -1;
         int labelWidth = 360;
         var priorityTrack = PriorityTrackHelper.GetPriorityTrack(game);
-        DrawingUtil.drawCenteredString(g2, "PRIORITY:", new Rectangle(landscapeShift, y, labelWidth, boxHeight), Storage.getFont64());
+        DrawingUtil.drawCenteredString(
+                g2, "PRIORITY:", new Rectangle(landscapeShift, y, labelWidth, boxHeight), Storage.getFont64());
         int trackXShift = landscapeShift + labelWidth;
         for (int i = 0; i < priorityTrack.size(); i++) {
             graphics.setColor(Color.WHITE);
@@ -670,7 +711,7 @@ public class MapGenerator implements AutoCloseable {
         int y = coord.y;
         boolean convertToGenericSC = isFoWPrivate;
         int deltaY = y + 80;
-        Map<Integer, Integer> scTradeGoods = game.getScTradeGoods();
+        Map<Integer, Integer> strategyCardToTradeGoodCount = game.getScTradeGoods();
         Collection<Player> players = game.getPlayers().values();
         Set<Integer> scPicked = new HashSet<>();
         for (Player player : players) {
@@ -678,12 +719,13 @@ public class MapGenerator implements AutoCloseable {
         }
         Map<Integer, Boolean> scPlayed = game.getScPlayed();
 
-        for (Map.Entry<Integer, Integer> scTGs : scTradeGoods.entrySet()) {
+        for (Map.Entry<Integer, Integer> scTGs : strategyCardToTradeGoodCount.entrySet()) {
             Integer sc = scTGs.getKey();
             if (sc == 0) {
                 continue;
             }
-            StrategyCardModel scModel = game.getStrategyCardModelByInitiative(sc).orElse(null);
+            StrategyCardModel scModel =
+                    game.getStrategyCardModelByInitiative(sc).orElse(null);
             graphics.setFont(Storage.getFont64());
             int textWidth = graphics.getFontMetrics().stringWidth(Integer.toString(sc));
 
@@ -741,8 +783,7 @@ public class MapGenerator implements AutoCloseable {
             int rotationDistance = allPlayers.size() - allPlayers.indexOf(activePlayer);
             Collections.rotate(allPlayers, rotationDistance);
             for (Player player : allPlayers) {
-                if (player.isPassed() || player.getSCs().isEmpty())
-                    continue;
+                if (player.isPassed() || player.getSCs().isEmpty()) continue;
                 String faction = player.getFaction();
                 if (faction != null) {
                     BufferedImage bufferedImage = DrawingUtil.getPlayerFactionIconImage(player);
@@ -786,49 +827,126 @@ public class MapGenerator implements AutoCloseable {
         graphics.setFont(Storage.getFont24());
 
         drawPAImageScaled(x, y, "cardback_secret.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getSecretObjectiveDeckSize()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
-        overlayText = game.getSecretObjectiveDeckSize() + "/" + game.getSecretObjectiveFullDeckSize() + " cards in the deck";
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getSecretObjectiveDeckSize()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
+        overlayText =
+                game.getSecretObjectiveDeckSize() + "/" + game.getSecretObjectiveFullDeckSize() + " cards in the deck";
         addWebsiteOverlay("Secret Objective Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_action.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getActionCards().size()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getActionCards().size()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
         overlayText = game.getActionCards().size() + "/" + game.getActionCardFullDeckSize() + " cards in the deck";
         addWebsiteOverlay("Action Card Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_cultural.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getExploreDeck("cultural").size()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
-        overlayText = game.getCulturalExploreDeckSize() + "/" + game.getCulturalExploreFullDeckSize() + " in the deck \n" + game.getCulturalExploreDiscardSize() + " cards in the discard pile";
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getExploreDeck("cultural").size()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
+        overlayText = game.getCulturalExploreDeckSize() + "/" + game.getCulturalExploreFullDeckSize()
+                + " in the deck \n" + game.getCulturalExploreDiscardSize() + " cards in the discard pile";
         addWebsiteOverlay("Cultural Explore Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_industrial.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getExploreDeck("industrial").size()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
-        overlayText = game.getIndustrialExploreDeckSize() + "/" + game.getIndustrialExploreFullDeckSize() + " in the deck \n" + game.getIndustrialExploreDiscardSize() + " cards in the discard pile";
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getExploreDeck("industrial").size()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
+        overlayText = game.getIndustrialExploreDeckSize() + "/" + game.getIndustrialExploreFullDeckSize()
+                + " in the deck \n" + game.getIndustrialExploreDiscardSize() + " cards in the discard pile";
         addWebsiteOverlay("Industrial Explore Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_hazardous.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getExploreDeck("hazardous").size()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
-        overlayText = game.getHazardousExploreDeckSize() + "/" + game.getHazardousExploreFullDeckSize() + " in the deck \n" + game.getHazardousExploreDiscardSize() + " cards in the discard pile";
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getExploreDeck("hazardous").size()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
+        overlayText = game.getHazardousExploreDeckSize() + "/" + game.getHazardousExploreFullDeckSize()
+                + " in the deck \n" + game.getHazardousExploreDiscardSize() + " cards in the discard pile";
         addWebsiteOverlay("Hazardous Explore Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_frontier.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getExploreDeck("frontier").size()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
-        overlayText = game.getFrontierExploreDeckSize() + "/" + game.getFrontierExploreFullDeckSize() + " in the deck \n" + game.getFrontierExploreDiscardSize() + " cards in the discard pile";
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getExploreDeck("frontier").size()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
+        overlayText = game.getFrontierExploreDeckSize() + "/" + game.getFrontierExploreFullDeckSize()
+                + " in the deck \n" + game.getFrontierExploreDiscardSize() + " cards in the discard pile";
         addWebsiteOverlay("Frontier Explore Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_relic.jpg", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getRelicDeckSize()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getRelicDeckSize()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
         overlayText = game.getRelicDeckSize() + "/" + game.getRelicFullDeckSize() + " cards in the deck";
         addWebsiteOverlay("Relic Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
 
         drawPAImageScaled(x, y, "cardback_agenda.png", cardWidth, cardHeight);
-        DrawingUtil.superDrawString(graphics, Integer.toString(game.getAgendaDeckSize()), x + cardWidth / 2, textY, Color.WHITE, HorizontalAlign.Center, VerticalAlign.Bottom, outline, Color.BLACK);
+        DrawingUtil.superDrawString(
+                graphics,
+                Integer.toString(game.getAgendaDeckSize()),
+                x + cardWidth / 2,
+                textY,
+                Color.WHITE,
+                HorizontalAlign.Center,
+                VerticalAlign.Bottom,
+                outline,
+                Color.BLACK);
         overlayText = game.getAgendaDeckSize() + "/" + game.getAgendaFullDeckSize() + " cards in the deck";
         addWebsiteOverlay("Agenda Deck", overlayText, x, y, cardWidth, cardHeight);
         x += horSpacing;
@@ -850,10 +968,13 @@ public class MapGenerator implements AutoCloseable {
             // always build fowplayer's stat location first
             statOrder.add(fowPlayer);
             // then build the stats of players we can see home systems
-            players.stream().filter(player -> FoWHelper.hasHomeSystemInView(player, fowPlayer)).forEach(statOrder::add);
+            players.stream()
+                    .filter(player -> FoWHelper.hasHomeSystemInView(player, fowPlayer))
+                    .forEach(statOrder::add);
             // then build the stats of everyone else
-            players.stream().filter(player -> FoWHelper.canSeeStatsOfPlayer(game, player, fowPlayer))
-                .forEach(statOrder::add);
+            players.stream()
+                    .filter(player -> FoWHelper.canSeeStatsOfPlayer(game, player, fowPlayer))
+                    .forEach(statOrder::add);
         }
 
         int ringCount = Math.max(Math.min(game.getRingCount(), RING_MAX_COUNT), RING_MIN_COUNT);
@@ -867,7 +988,8 @@ public class MapGenerator implements AutoCloseable {
             // if we can't see stats anyway, skip this player
             if (fow && !FoWHelper.canSeeStatsOfPlayer(game, p, fowPlayer)) continue;
 
-            List<String> myStatTiles = PlayerStatsHelper.findThreeNearbyStatTiles(game, p, statTilesInUse, isFoWPrivate, fowPlayer);
+            List<String> myStatTiles =
+                    PlayerStatsHelper.findThreeNearbyStatTiles(game, p, statTilesInUse, isFoWPrivate, fowPlayer);
             if (myStatTiles == null) {
                 useNewSystem = false;
                 break;
@@ -915,10 +1037,8 @@ public class MapGenerator implements AutoCloseable {
 
         int dir1 = 0, dir2 = 0, j = 0;
         for (String p : PositionMapper.getAdjacentTilePositions(statTiles.get(0))) {
-            if (p.equals(statTiles.get(1)))
-                dir1 = j;
-            if (p.equals(statTiles.get(2)))
-                dir2 = j;
+            if (p.equals(statTiles.get(1))) dir1 = j;
+            if (p.equals(statTiles.get(2))) dir2 = j;
             j++;
         }
 
@@ -930,9 +1050,7 @@ public class MapGenerator implements AutoCloseable {
             Point p = points.get(pos);
             List<Integer> adjDir = new ArrayList<>();
             List<String> adjPos = PositionMapper.getAdjacentTilePositions(pos);
-            for (int i = 0; i < 6; i++)
-                if (statTiles.contains(adjPos.get(i)))
-                    adjDir.add(i);
+            for (int i = 0; i < 6; i++) if (statTiles.contains(adjPos.get(i))) adjDir.add(i);
             BufferedImage hex = DrawingUtil.hexBorder(game.getHexBorderStyle(), playerColor, adjDir);
             graphics.drawImage(tint, p.x, p.y, null);
             graphics.drawImage(hex, p.x, p.y, null);
@@ -957,8 +1075,15 @@ public class MapGenerator implements AutoCloseable {
             if (!game.hideUserNames()) {
                 String name = userName.substring(0, Math.min(userName.length(), 15));
                 DrawingUtil.superDrawString(
-                    graphics, name, statTileMid.x + point.x, statTileMid.y + point.y,
-                    Color.WHITE, center, null, stroke5, Color.BLACK);
+                        graphics,
+                        name,
+                        statTileMid.x + point.x,
+                        statTileMid.y + point.y,
+                        Color.WHITE,
+                        center,
+                        null,
+                        stroke5,
+                        Color.BLACK);
             }
         }
 
@@ -971,7 +1096,8 @@ public class MapGenerator implements AutoCloseable {
                 factionText = player.getDisplayName();
             }
             factionText = StringUtils.capitalize(factionText);
-            DrawingUtil.superDrawString(graphics, factionText, point.x, point.y, Color.WHITE, center, null, stroke5, Color.BLACK);
+            DrawingUtil.superDrawString(
+                    graphics, factionText, point.x, point.y, Color.WHITE, center, null, stroke5, Color.BLACK);
         }
 
         { // PAINT VICTORY POINTS
@@ -979,14 +1105,16 @@ public class MapGenerator implements AutoCloseable {
             String vpCount = "VP: " + player.getTotalVictoryPoints() + " / " + game.getVp();
             point = PositionMapper.getPlayerStats("newvp");
             point.translate(statTileMid.x, statTileMid.y);
-            DrawingUtil.superDrawString(graphics, vpCount, point.x, point.y, Color.WHITE, center, null, stroke5,
-                Color.BLACK);
+            DrawingUtil.superDrawString(
+                    graphics, vpCount, point.x, point.y, Color.WHITE, center, null, stroke5, Color.BLACK);
         }
 
         { // PAINT SO ICONS
             List<String> soToPoList = game.getSoToPoList();
             int unscoredSOs = player.getSecrets().size();
-            int scoredSOs = (int) player.getSecretsScored().keySet().stream().filter(so -> !soToPoList.contains(so)).count();
+            int scoredSOs = (int) player.getSecretsScored().keySet().stream()
+                    .filter(so -> !soToPoList.contains(so))
+                    .count();
             int secretsEmpty = player.getMaxSOCount() - unscoredSOs - scoredSOs;
             int soOffset = (15 + 35 * player.getMaxSOCount()) / 2 - 50;
 
@@ -1012,8 +1140,7 @@ public class MapGenerator implements AutoCloseable {
             graphics.setFont(Storage.getFont80());
             int scsize = 96;
             List<Integer> playerSCs = new ArrayList<>(player.getSCs());
-            if (player.hasTheZeroToken())
-                playerSCs.add(0);
+            if (player.hasTheZeroToken()) playerSCs.add(0);
             Collections.sort(playerSCs);
 
             point = PositionMapper.getPlayerStats("newsc");
@@ -1021,15 +1148,23 @@ public class MapGenerator implements AutoCloseable {
             point.translate(-1 * (scsize / 2) * (playerSCs.size() - 1), -1 * (scsize / 2));
 
             for (int sc : playerSCs) {
-                StrategyCardModel scModel = game.getStrategyCardModelByInitiative(sc).orElse(null);
+                StrategyCardModel scModel =
+                        game.getStrategyCardModelByInitiative(sc).orElse(null);
                 if (sc == 0) {
                     drawPAImageScaled(point.x, point.y, "pa_telepathic.png", scsize);
                     point.translate(scsize, 0);
                 } else {
                     int fontYoffset = (scsize / 2) + 25;
                     DrawingUtil.superDrawString(
-                        graphics, Integer.toString(sc), point.x, point.y + fontYoffset,
-                        ColorUtil.getSCColor(sc, game), center, bottom, stroke6, Color.BLACK);
+                            graphics,
+                            Integer.toString(sc),
+                            point.x,
+                            point.y + fontYoffset,
+                            ColorUtil.getSCColor(sc, game),
+                            center,
+                            bottom,
+                            stroke6,
+                            Color.BLACK);
                     if (scModel != null) {
                         addWebsiteOverlay(scModel, point.x - 20, point.y + 20, 40, 50);
                         // graphics.drawRect(point.x - 20, point.y + 20, 40, 50); //debug
@@ -1065,17 +1200,16 @@ public class MapGenerator implements AutoCloseable {
             }
 
             DrawingUtil.drawCCOfPlayer(
-                graphics, ccID, point.x, point.y, player.getTacticalCC(), player, false,
-                rightAlign);
+                    graphics, ccID, point.x, point.y, player.getTacticalCC(), player, false, rightAlign);
             drawFleetCCOfPlayer(graphics, fleetCCID, point.x, point.y + 65, player, rightAlign);
             DrawingUtil.drawCCOfPlayer(
-                graphics, ccID, point.x, point.y + 130, player.getStrategicCC(), player, false,
-                rightAlign);
+                    graphics, ccID, point.x, point.y + 130, player.getStrategicCC(), player, false, rightAlign);
 
             // Additional FS
             int additionalFleetSupply = 0;
             String addFS = "";
-            if (player.hasAbility("edict")) additionalFleetSupply += player.getMahactCC().size();
+            if (player.hasAbility("edict"))
+                additionalFleetSupply += player.getMahactCC().size();
             if (player.hasAbility("armada")) additionalFleetSupply += 2;
             if (additionalFleetSupply > 0) addFS = "*";
 
@@ -1085,9 +1219,12 @@ public class MapGenerator implements AutoCloseable {
             graphics.setFont(Storage.getFont28());
             point.translate(rightAlign ? 58 : -3, 32);
             String fleetCCs = player.getFleetCC() + additionalFleetSupply + addFS;
-            DrawingUtil.superDrawString(graphics, reps.get(0), point.x, point.y, Color.WHITE, align, null, stroke4, Color.BLACK);
-            DrawingUtil.superDrawString(graphics, fleetCCs, point.x, point.y + 65, Color.WHITE, align, null, stroke4, Color.BLACK);
-            DrawingUtil.superDrawString(graphics, reps.get(2), point.x, point.y + 130, Color.WHITE, align, null, stroke4, Color.BLACK);
+            DrawingUtil.superDrawString(
+                    graphics, reps.get(0), point.x, point.y, Color.WHITE, align, null, stroke4, Color.BLACK);
+            DrawingUtil.superDrawString(
+                    graphics, fleetCCs, point.x, point.y + 65, Color.WHITE, align, null, stroke4, Color.BLACK);
+            DrawingUtil.superDrawString(
+                    graphics, reps.get(2), point.x, point.y + 130, Color.WHITE, align, null, stroke4, Color.BLACK);
         }
 
         int offBoardHighlighting = 0;
@@ -1096,100 +1233,130 @@ public class MapGenerator implements AutoCloseable {
                 boolean hasNanoForge = player.hasRelic("nanoforge") || player.hasRelic("absol_nanoforge");
                 for (String planet : player.getPlanets()) {
                     PlanetModel custodiaVigilia = Mapper.getPlanet(planet);
-                    offBoardHighlighting += (custodiaVigilia.getLegendaryAbilityName() != null && game.getTileFromPlanet(planet) == null) ? 1 : 0;
+                    offBoardHighlighting += (custodiaVigilia.getLegendaryAbilityName() != null
+                                    && game.getTileFromPlanet(planet) == null)
+                            ? 1
+                            : 0;
                 }
                 if (offBoardHighlighting >= 1) {
                     String legendaryFile = ResourceHelper.getInstance().getGeneralFile("Legendary_complete.png");
                     BufferedImage bufferedImage = ImageHelper.read(legendaryFile);
                     if (offBoardHighlighting + (hasNanoForge ? 1 : 0) >= 2) {
-                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / (offBoardHighlighting + (hasNanoForge ? 1 : 0)) / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
+                                / (offBoardHighlighting + (hasNanoForge ? 1 : 0))
+                                / bufferedImage.getWidth()
+                                / bufferedImage.getHeight()));
                         for (int i = 0; i < offBoardHighlighting; i++) {
-                            graphics.drawImage(bufferedImage,
-                                miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 - 30 + i * 60 / (offBoardHighlighting + (hasNanoForge ? 1 : 0) - 1),
-                                miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 - 30 + i * 60 / (offBoardHighlighting + (hasNanoForge ? 1 : 0) - 1) + (player.isSpeaker() ? 30 : 0),
-                                null);
+                            graphics.drawImage(
+                                    bufferedImage,
+                                    miscTile.x
+                                            + (TILE_WIDTH - bufferedImage.getWidth()) / 2
+                                            - 30
+                                            + i * 60 / (offBoardHighlighting + (hasNanoForge ? 1 : 0) - 1),
+                                    miscTile.y
+                                            + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                            - 30
+                                            + i * 60 / (offBoardHighlighting + (hasNanoForge ? 1 : 0) - 1)
+                                            + (player.isSpeaker() ? 30 : 0),
+                                    null);
                         }
                     } else {
-                        graphics.drawImage(bufferedImage,
-                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 + (player.isSpeaker() ? 30 : 0),
-                            null);
+                        graphics.drawImage(
+                                bufferedImage,
+                                miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     }
                 }
                 if (hasNanoForge) {
                     String relicFile = ResourceHelper.getInstance().getGeneralFile("Relic.png");
                     BufferedImage bufferedImage = ImageHelper.read(relicFile);
                     if (offBoardHighlighting >= 1) {
-                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f / (offBoardHighlighting + 1) / bufferedImage.getWidth() / bufferedImage.getHeight()));
-                        graphics.drawImage(bufferedImage,
-                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 + 30,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 + 30 + (player.isSpeaker() ? 30 : 0),
-                            null);
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
+                                / (offBoardHighlighting + 1)
+                                / bufferedImage.getWidth()
+                                / bufferedImage.getHeight()));
+                        graphics.drawImage(
+                                bufferedImage,
+                                miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 + 30,
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        + 30
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     } else {
-                        graphics.drawImage(bufferedImage,
-                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 + (player.isSpeaker() ? 30 : 0),
-                            null);
+                        graphics.drawImage(
+                                bufferedImage,
+                                miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     }
                     offBoardHighlighting++;
                 }
             } else if (displayType == DisplayType.empties) {
                 boolean hasStellar = false; // not working
                 String relicFile = ResourceHelper.getInstance().getGeneralFile("Relic.png");
-                boolean hasHero = false; //was not working
+                boolean hasHero = false; // was not working
                 String heroFile = ResourceHelper.getResourceFromFolder("emojis/leaders/", "Hero.png");
                 if (player.hasLeaderUnlocked("muaathero")) {
-                    heroFile = ResourceHelper.getResourceFromFolder("emojis/leaders/pok/Emoji Farm 4/", "MuaatHero.png");
+                    heroFile =
+                            ResourceHelper.getResourceFromFolder("emojis/leaders/pok/Emoji Farm 4/", "MuaatHero.png");
                 }
                 BufferedImage bufferedImage;
                 if (hasStellar && hasHero) {
                     bufferedImage = ImageHelper.read(relicFile);
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(17000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(17000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 - 30,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 - 30
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 - 30,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    - 30
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                     bufferedImage = ImageHelper.read(heroFile);
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(17000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(17000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 + 30,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 + 30
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 + 30,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    + 30
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                     offBoardHighlighting += 2;
                 } else if (hasStellar) {
                     bufferedImage = ImageHelper.read(relicFile);
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                     offBoardHighlighting++;
                 } else if (hasHero) {
                     bufferedImage = ImageHelper.read(heroFile);
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                     offBoardHighlighting++;
                 }
-            } else if (displayType == DisplayType.wormholes && player.getFaction().equalsIgnoreCase("ghost")) {
+            } else if (displayType == DisplayType.wormholes && "ghost".equalsIgnoreCase(player.getFaction())) {
                 boolean alphaOnMap = false;
                 boolean betaOnMap = false;
                 boolean gammaOnMap = false;
@@ -1208,9 +1375,9 @@ public class MapGenerator implements AutoCloseable {
                 x += (offBoardHighlighting == 3 ? 40 : 0) + (offBoardHighlighting == 2 ? 30 : 0);
                 int y = miscTile.y + (SPACE_FOR_TILE_HEIGHT - 80) / 2 + (player.isSpeaker() ? 30 : 0);
                 boolean reconstruction = (ButtonHelper.isLawInPlay(game, "wormhole_recon")
-                    || ButtonHelper.isLawInPlay(game, "absol_recon"));
+                        || ButtonHelper.isLawInPlay(game, "absol_recon"));
                 boolean travelBan = ButtonHelper.isLawInPlay(game, "travel_ban")
-                    || ButtonHelper.isLawInPlay(game, "absol_travelban");
+                        || ButtonHelper.isLawInPlay(game, "absol_travelban");
 
                 if (!gammaOnMap) {
                     String tokenFile = Mapper.getTokenPath(gammaID);
@@ -1223,14 +1390,13 @@ public class MapGenerator implements AutoCloseable {
                     BufferedImage bufferedImage = ImageHelper.read(tokenFile);
                     graphics.drawImage(bufferedImage, x, y, null);
                     if (travelBan) {
-                        BufferedImage blockedWormholeImage = ImageHelper.read(
-                            ResourceHelper.getInstance()
+                        BufferedImage blockedWormholeImage = ImageHelper.read(ResourceHelper.getInstance()
                                 .getTokenFile("agenda_wormhole_blocked" + (reconstruction ? "_half" : "") + ".png"));
                         graphics.drawImage(blockedWormholeImage, x + 40, y + 40, null);
                     }
                     if (reconstruction) {
-                        BufferedImage doubleWormholeImage = ImageHelper
-                            .readScaled(ResourceHelper.getInstance().getTokenFile("token_whalpha.png"), 40.0f / 65);
+                        BufferedImage doubleWormholeImage = ImageHelper.readScaled(
+                                ResourceHelper.getInstance().getTokenFile("token_whalpha.png"), 40.0f / 65);
                         graphics.drawImage(doubleWormholeImage, x, y, null);
                     }
                     x -= (offBoardHighlighting == 3 ? 40 : 0) + (offBoardHighlighting == 2 ? 60 : 0);
@@ -1240,14 +1406,13 @@ public class MapGenerator implements AutoCloseable {
                     BufferedImage bufferedImage = ImageHelper.read(tokenFile);
                     graphics.drawImage(bufferedImage, x, y, null);
                     if (travelBan) {
-                        BufferedImage blockedWormholeImage = ImageHelper.read(
-                            ResourceHelper.getInstance()
+                        BufferedImage blockedWormholeImage = ImageHelper.read(ResourceHelper.getInstance()
                                 .getTokenFile("agenda_wormhole_blocked" + (reconstruction ? "_half" : "") + ".png"));
                         graphics.drawImage(blockedWormholeImage, x + 40, y + 40, null);
                     }
                     if (reconstruction) {
-                        BufferedImage doubleWormholeImage = ImageHelper
-                            .readScaled(ResourceHelper.getInstance().getTokenFile("token_whbeta.png"), 40.0f / 65);
+                        BufferedImage doubleWormholeImage = ImageHelper.readScaled(
+                                ResourceHelper.getInstance().getTokenFile("token_whbeta.png"), 40.0f / 65);
                         graphics.drawImage(doubleWormholeImage, x, y, null);
                     }
                     x -= (offBoardHighlighting == 3 ? 40 : 0) + (offBoardHighlighting == 2 ? 60 : 0);
@@ -1255,7 +1420,9 @@ public class MapGenerator implements AutoCloseable {
             } else if (displayType == DisplayType.anomalies && player.ownsUnitSubstring("cabal_spacedock")) {
                 UnitKey unitKey = Mapper.getUnitKey("sd", player.getColor());
                 int unitNum = player.getUnitCap("sd") + player.getUnitCap("csd");
-                unitNum = (unitNum == 0 ? PositionMapper.getReinforcementsPosition("sd").getPositionCount("sd") : unitNum);
+                unitNum = (unitNum == 0
+                        ? PositionMapper.getReinforcementsPosition("sd").getPositionCount("sd")
+                        : unitNum);
                 for (Tile tile2 : game.getTileMap().values()) {
                     for (UnitHolder unitHolder : tile2.getUnitHolders().values()) {
                         unitNum -= unitHolder.getUnitCount(unitKey);
@@ -1287,23 +1454,24 @@ public class MapGenerator implements AutoCloseable {
                                 traitFile = ResourceHelper.getInstance().getGeneralFile("Legendary_complete.png");
                             } else {
                                 traitFile = ResourceHelper.getInstance()
-                                    .getFactionFile(custodiaVigilia.getFactionHomeworld() + ".png");
+                                        .getFactionFile(custodiaVigilia.getFactionHomeworld() + ".png");
                             }
                         } else if (traits.size() == 1) {
                             String t = planetReal.getPlanetType().getFirst();
-                            traitFile = ResourceHelper.getInstance().getGeneralFile(
-                                ("" + t.charAt(0)).toUpperCase() + t.substring(1).toLowerCase() + ".png");
+                            traitFile = ResourceHelper.getInstance()
+                                    .getGeneralFile(("" + t.charAt(0)).toUpperCase()
+                                            + t.substring(1).toLowerCase() + ".png");
                         } else if (!traits.isEmpty()) {
                             String t = "";
                             t += traits.contains("cultural") ? "C" : "";
                             t += traits.contains("hazardous") ? "H" : "";
                             t += traits.contains("industrial") ? "I" : "";
-                            if (t.equals("CHI")) {
+                            if ("CHI".equals(t)) {
                                 traitFile = ResourceHelper.getInstance()
-                                    .getPlanetResource("pc_attribute_combo_CHI_big.png");
+                                        .getPlanetResource("pc_attribute_combo_CHI_big.png");
                             } else {
                                 traitFile = ResourceHelper.getInstance()
-                                    .getPlanetResource("pc_attribute_combo_" + t + ".png");
+                                        .getPlanetResource("pc_attribute_combo_" + t + ".png");
                             }
                         }
                         traitFiles.add(traitFile);
@@ -1313,29 +1481,35 @@ public class MapGenerator implements AutoCloseable {
                 if (offBoardHighlighting >= 2) {
                     for (int i = 0; i < offBoardHighlighting; i++) {
                         BufferedImage bufferedImage = ImageHelper.read(traitFiles.get(i));
-                        bufferedImage = ImageHelper.scale(
-                            bufferedImage, (float) Math.sqrt(
-                                24000.0f / offBoardHighlighting / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
+                                / offBoardHighlighting
+                                / bufferedImage.getWidth()
+                                / bufferedImage.getHeight()));
                         graphics.drawImage(
-                            bufferedImage,
-                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2 - 30
-                                + i * 60 / (offBoardHighlighting - 1),
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 - 30
-                                + i * 60 / (offBoardHighlighting - 1) + (player.isSpeaker() ? 30 : 0),
-                            null);
+                                bufferedImage,
+                                miscTile.x
+                                        + (TILE_WIDTH - bufferedImage.getWidth()) / 2
+                                        - 30
+                                        + i * 60 / (offBoardHighlighting - 1),
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        - 30
+                                        + i * 60 / (offBoardHighlighting - 1)
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     }
                 } else if (offBoardHighlighting == 1) {
                     BufferedImage bufferedImage = ImageHelper.read(traitFiles.getFirst());
                     if (bufferedImage != null) {
-                        bufferedImage = ImageHelper.scale(
-                            bufferedImage,
-                            (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                                Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                         graphics.drawImage(
-                            bufferedImage,
-                            miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
-                                + (player.isSpeaker() ? 30 : 0),
-                            null);
+                                bufferedImage,
+                                miscTile.x + (TILE_WIDTH - bufferedImage.getWidth()) / 2,
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     }
                 }
             } else if (displayType == DisplayType.techskips) {
@@ -1364,7 +1538,8 @@ public class MapGenerator implements AutoCloseable {
                                     techFiles.add(ResourceHelper.getInstance().getGeneralFile("Warfare_light.png"));
                                     break;
                                 default:
-                                    techFiles.add(ResourceHelper.getInstance().getGeneralFile("Generic_Technology.png"));
+                                    techFiles.add(
+                                            ResourceHelper.getInstance().getGeneralFile("Generic_Technology.png"));
                             }
                             offBoardHighlighting++;
                         }
@@ -1373,28 +1548,34 @@ public class MapGenerator implements AutoCloseable {
                 if (offBoardHighlighting >= 2) {
                     for (int i = 0; i < offBoardHighlighting; i++) {
                         BufferedImage bufferedImage = ImageHelper.read(techFiles.get(i));
-                        bufferedImage = ImageHelper.scale(
-                            bufferedImage, (float) Math.sqrt(
-                                24000.0f / offBoardHighlighting / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
+                                / offBoardHighlighting
+                                / bufferedImage.getWidth()
+                                / bufferedImage.getHeight()));
                         graphics.drawImage(
-                            bufferedImage,
-                            miscTile.x + (345 - bufferedImage.getWidth()) / 2 - 30
-                                + i * 60 / (offBoardHighlighting - 1),
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 - 30
-                                + i * 60 / (offBoardHighlighting - 1) + (player.isSpeaker() ? 30 : 0),
-                            null);
+                                bufferedImage,
+                                miscTile.x
+                                        + (345 - bufferedImage.getWidth()) / 2
+                                        - 30
+                                        + i * 60 / (offBoardHighlighting - 1),
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        - 30
+                                        + i * 60 / (offBoardHighlighting - 1)
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                     }
                 } else if (offBoardHighlighting == 1) {
                     BufferedImage bufferedImage = ImageHelper.read(techFiles.getFirst());
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (345 - bufferedImage.getWidth()) / 2,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (345 - bufferedImage.getWidth()) / 2,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                 }
             } else if (displayType == DisplayType.attachments) {
                 Map<String, String> attachFiles = new HashMap<>();
@@ -1410,78 +1591,97 @@ public class MapGenerator implements AutoCloseable {
                         }
                         attachFiles.put(planet, ResourceHelper.getInstance().getGeneralFile("misc_chevrons_basic.png"));
                         if (attach.contains("attachment_tombofemphidia.png")) {
-                            attachFiles.put(planet, ResourceHelper.getInstance().getGeneralFile("misc_chevrons_toe.png"));
+                            attachFiles.put(
+                                    planet, ResourceHelper.getInstance().getGeneralFile("misc_chevrons_toe.png"));
                         }
                         attachCount.put(planet, attach.size());
                         offBoardHighlighting++;
                     }
                 }
                 if (offBoardHighlighting >= 2) {
-                    for (String planet : attachFiles.keySet()) {
-                        BufferedImage bufferedImage = ImageHelper.read(attachFiles.get(planet));
-                        bufferedImage = ImageHelper.scale(
-                            bufferedImage, (float) Math.sqrt(
-                                24000.0f / offBoardHighlighting / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    for (Map.Entry<String, String> entry : attachFiles.entrySet()) {
+                        String planet = entry.getKey();
+                        BufferedImage bufferedImage = ImageHelper.read(entry.getValue());
+                        bufferedImage = ImageHelper.scale(bufferedImage, (float) Math.sqrt(24000.0f
+                                / offBoardHighlighting
+                                / bufferedImage.getWidth()
+                                / bufferedImage.getHeight()));
                         graphics.drawImage(
-                            bufferedImage,
-                            miscTile.x + (345 - bufferedImage.getWidth()) / 2 - 30,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2 - 30
-                                + (player.isSpeaker() ? 30 : 0),
-                            null);
+                                bufferedImage,
+                                miscTile.x + (345 - bufferedImage.getWidth()) / 2 - 30,
+                                miscTile.y
+                                        + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                        - 30
+                                        + (player.isSpeaker() ? 30 : 0),
+                                null);
                         if (attachCount.get(planet) > 1) {
                             graphics.setColor(Color.WHITE);
                             graphics.fillOval(
-                                miscTile.x + (345 - 80) / 2 - 30,
-                                miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 - 30 + (player.isSpeaker() ? 30 : 0),
-                                80, 80);
+                                    miscTile.x + (345 - 80) / 2 - 30,
+                                    miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 - 30 + (player.isSpeaker() ? 30 : 0),
+                                    80,
+                                    80);
                             graphics.setColor(Color.BLACK);
                             graphics.fillOval(
-                                miscTile.x + (345 - 72) / 2 - 30,
-                                miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 - 30 + (player.isSpeaker() ? 30 : 0) + 4,
-                                72, 72);
+                                    miscTile.x + (345 - 72) / 2 - 30,
+                                    miscTile.y
+                                            + (SPACE_FOR_TILE_HEIGHT - 16) / 2
+                                            - 30
+                                            + (player.isSpeaker() ? 30 : 0)
+                                            + 4,
+                                    72,
+                                    72);
                             graphics.setColor(Color.WHITE);
                             DrawingUtil.drawCenteredString(
-                                graphics, "" + attachCount.get(planet),
-                                new Rectangle(
-                                    miscTile.x + (345 - 80) / 2 - 30,
-                                    miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 - 30
-                                        + (player.isSpeaker() ? 30 : 0),
-                                    80, 80),
-                                Storage.getFont48());
+                                    graphics,
+                                    "" + attachCount.get(planet),
+                                    new Rectangle(
+                                            miscTile.x + (345 - 80) / 2 - 30,
+                                            miscTile.y
+                                                    + (SPACE_FOR_TILE_HEIGHT - 16) / 2
+                                                    - 30
+                                                    + (player.isSpeaker() ? 30 : 0),
+                                            80,
+                                            80),
+                                    Storage.getFont48());
                         }
                     }
                 } else if (offBoardHighlighting == 1) {
                     String planet = attachFiles.keySet().iterator().next();
 
                     BufferedImage bufferedImage = ImageHelper.read(attachFiles.get(planet));
-                    bufferedImage = ImageHelper.scale(
-                        bufferedImage,
-                        (float) Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
+                    bufferedImage = ImageHelper.scale(bufferedImage, (float)
+                            Math.sqrt(24000.0f / bufferedImage.getWidth() / bufferedImage.getHeight()));
                     graphics.drawImage(
-                        bufferedImage,
-                        miscTile.x + (345 - bufferedImage.getWidth()) / 2,
-                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
-                            + (player.isSpeaker() ? 30 : 0),
-                        null);
+                            bufferedImage,
+                            miscTile.x + (345 - bufferedImage.getWidth()) / 2,
+                            miscTile.y
+                                    + (SPACE_FOR_TILE_HEIGHT - bufferedImage.getHeight()) / 2
+                                    + (player.isSpeaker() ? 30 : 0),
+                            null);
                     if (attachCount.get(planet) > 1) {
                         graphics.setColor(Color.WHITE);
                         graphics.fillOval(
-                            miscTile.x + (345 - 80) / 2,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 + (player.isSpeaker() ? 30 : 0),
-                            80, 80);
-                        graphics.setColor(Color.BLACK);
-                        graphics.fillOval(
-                            miscTile.x + (345 - 72) / 2,
-                            miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 + (player.isSpeaker() ? 30 : 0) + 4,
-                            72, 72);
-                        graphics.setColor(Color.WHITE);
-                        DrawingUtil.drawCenteredString(
-                            graphics, "" + attachCount.get(planet),
-                            new Rectangle(
                                 miscTile.x + (345 - 80) / 2,
                                 miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 + (player.isSpeaker() ? 30 : 0),
-                                80, 80),
-                            Storage.getFont48());
+                                80,
+                                80);
+                        graphics.setColor(Color.BLACK);
+                        graphics.fillOval(
+                                miscTile.x + (345 - 72) / 2,
+                                miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 + (player.isSpeaker() ? 30 : 0) + 4,
+                                72,
+                                72);
+                        graphics.setColor(Color.WHITE);
+                        DrawingUtil.drawCenteredString(
+                                graphics,
+                                "" + attachCount.get(planet),
+                                new Rectangle(
+                                        miscTile.x + (345 - 80) / 2,
+                                        miscTile.y + (SPACE_FOR_TILE_HEIGHT - 16) / 2 + (player.isSpeaker() ? 30 : 0),
+                                        80,
+                                        80),
+                                Storage.getFont48());
                     }
                 }
             }
@@ -1506,26 +1706,43 @@ public class MapGenerator implements AutoCloseable {
             if (player.isPassed()) {
                 point = PositionMapper.getPlayerStats("newpassed");
                 point.translate(miscTile.x, miscTile.y);
-                DrawingUtil.superDrawString(graphics, "PASSED", point.x, point.y, ColorUtil.PassedColor, center, null, stroke4, Color.BLACK);
+                DrawingUtil.superDrawString(
+                        graphics,
+                        "PASSED",
+                        point.x,
+                        point.y,
+                        ColorUtil.PassedColor,
+                        center,
+                        null,
+                        stroke4,
+                        Color.BLACK);
             } else if (player.getUserID().equals(activePlayerID) && "action".equals(phase)) {
                 point = PositionMapper.getPlayerStats("newpassed");
                 point.translate(miscTile.x, miscTile.y);
-                DrawingUtil.superDrawString(graphics, "ACTIVE", point.x, point.y, ColorUtil.ActiveColor, center, null, stroke4, Color.BLACK);
+                DrawingUtil.superDrawString(
+                        graphics,
+                        "ACTIVE",
+                        point.x,
+                        point.y,
+                        ColorUtil.ActiveColor,
+                        center,
+                        null,
+                        stroke4,
+                        Color.BLACK);
             }
             if (player.isAFK()) {
                 point = PositionMapper.getPlayerStats("newafk");
                 point.translate(miscTile.x, miscTile.y);
                 DrawingUtil.superDrawString(
-                    graphics, "AFK", point.x, point.y, Color.gray, center, null, stroke4,
-                    Color.BLACK);
+                        graphics, "AFK", point.x, point.y, Color.gray, center, null, stroke4, Color.BLACK);
             }
             graphics.setColor(Color.WHITE);
         }
     }
 
     private void paintPlayerInfoOld(Game game, Player player, int ringCount) {
-        int deltaX = 0, deltaSplitX = 0;
-        int deltaY = 0, deltaSplitY = 0;
+        int deltaX, deltaSplitX = 0;
+        int deltaY, deltaSplitY = 0;
 
         String playerStatsAnchor = player.getPlayerStatsAnchorPosition();
         if (playerStatsAnchor != null) {
@@ -1534,14 +1751,12 @@ public class MapGenerator implements AutoCloseable {
             Point anchorProjectedPoint = PositionMapper.getTilePosition(playerStatsAnchor);
             if (anchorProjectedPoint != null) {
                 Point playerStatsAnchorPoint = PositionMapper.getScaledTilePosition(
-                    game,
-                    playerStatsAnchor, anchorProjectedPoint.x,
-                    anchorProjectedPoint.y);
-                Integer anchorLocationIndex = PositionMapper
-                    .getRingSideNumberOfTileID(player.getPlayerStatsAnchorPosition());
+                        game, playerStatsAnchor, anchorProjectedPoint.x, anchorProjectedPoint.y);
+                Integer anchorLocationIndex =
+                        PositionMapper.getRingSideNumberOfTileID(player.getPlayerStatsAnchorPosition());
                 anchorLocationIndex = anchorLocationIndex == null ? 0 : anchorLocationIndex - 1;
-                boolean isCorner = playerStatsAnchor
-                    .equals(PositionMapper.getTileIDAtCornerPositionOfRing(ringCount, anchorLocationIndex + 1));
+                boolean isCorner = playerStatsAnchor.equals(
+                        PositionMapper.getTileIDAtCornerPositionOfRing(ringCount, anchorLocationIndex + 1));
                 if (anchorLocationIndex == 0 && isCorner) { // North Corner
                     deltaX = playerStatsAnchorPoint.x + EXTRA_X + 80;
                     deltaY = playerStatsAnchorPoint.y - 80;
@@ -1577,17 +1792,13 @@ public class MapGenerator implements AutoCloseable {
                     deltaX = playerStatsAnchorPoint.x + 10;
                     deltaY = playerStatsAnchorPoint.y - 100;
                     deltaSplitX = 200;
-                } else
-                    return;
-            } else
-                return;
-        } else
-            return;
+                } else return;
+            } else return;
+        } else return;
 
         String userName = player.getUserName();
 
-        boolean convertToGeneric = isFoWPrivate
-            && !FoWHelper.canSeeStatsOfPlayer(game, player, fowPlayer);
+        boolean convertToGeneric = isFoWPrivate && !FoWHelper.canSeeStatsOfPlayer(game, player, fowPlayer);
         if (convertToGeneric) {
             return;
         }
@@ -1596,8 +1807,7 @@ public class MapGenerator implements AutoCloseable {
         Point point = PositionMapper.getPlayerStats(Constants.STATS_USERNAME);
         if (!game.hideUserNames()) {
             graphics.drawString(
-                userName.substring(0, Math.min(userName.length(), 11)), point.x + deltaX,
-                point.y + deltaY);
+                    userName.substring(0, Math.min(userName.length(), 11)), point.x + deltaX, point.y + deltaY);
         }
 
         // PAINT FACTION
@@ -1648,7 +1858,6 @@ public class MapGenerator implements AutoCloseable {
             point = PositionMapper.getPlayerStats(Constants.STATS_SC);
             if (sc != 0) {
                 graphics.drawString(scText, point.x + deltaX + 64 * count, point.y + deltaY);
-
             }
             count++;
         }
@@ -1666,12 +1875,10 @@ public class MapGenerator implements AutoCloseable {
         }
 
         DrawingUtil.drawCCOfPlayer(
-            graphics, ccID, x + deltaSplitX, y - deltaSplitY, player.getTacticalCC(), player,
-            false, false);
+                graphics, ccID, x + deltaSplitX, y - deltaSplitY, player.getTacticalCC(), player, false, false);
         drawFleetCCOfPlayer(graphics, fleetCCID, x + deltaSplitX, y + 65 - deltaSplitY, player, false);
         DrawingUtil.drawCCOfPlayer(
-            graphics, ccID, x + deltaSplitX, y + 130 - deltaSplitY, player.getStrategicCC(),
-            player, false, false);
+                graphics, ccID, x + deltaSplitX, y + 130 - deltaSplitY, player.getStrategicCC(), player, false, false);
 
         // PAINT SPEAKER
         if (player.isSpeaker()) {
@@ -1682,8 +1889,10 @@ public class MapGenerator implements AutoCloseable {
                 point = PositionMapper.getPlayerStats(Constants.STATS_SPEAKER);
                 int negativeDelta = 0;
                 graphics.drawImage(
-                    bufferedImage, point.x + deltaX + deltaSplitX + negativeDelta,
-                    point.y + deltaY - deltaSplitY, null);
+                        bufferedImage,
+                        point.x + deltaX + deltaSplitX + negativeDelta,
+                        point.y + deltaY - deltaSplitY,
+                        null);
                 graphics.setColor(Color.WHITE);
             }
         }
@@ -1717,9 +1926,7 @@ public class MapGenerator implements AutoCloseable {
     }
 
     private static void drawFleetCCOfPlayer(
-        Graphics graphics, String ccID, int x, int y, Player player,
-        boolean rightAlign
-    ) {
+            Graphics graphics, String ccID, int x, int y, Player player, boolean rightAlign) {
         String ccPath = Mapper.getCCPath(ccID);
         int ccCount = player.getFleetCC();
         boolean hasArmada = player.hasAbility("armada");
@@ -1733,8 +1940,8 @@ public class MapGenerator implements AutoCloseable {
 
             // DRAW TWO ARMADA TOKENS
             if (hasArmada) {
-                BufferedImage armadaLowerCCImage = ImageHelper
-                    .read(Mapper.getCCPath(Mapper.getCCID(player.getColor())));
+                BufferedImage armadaLowerCCImage =
+                        ImageHelper.read(Mapper.getCCPath(Mapper.getCCID(player.getColor())));
                 BufferedImage armadaCCImage = ImageHelper.read(Mapper.getCCPath("fleet_armada.png"));
                 for (int i = 0; i < 2; i++) {
                     graphics.drawImage(armadaLowerCCImage, x, y, null);
@@ -1767,7 +1974,7 @@ public class MapGenerator implements AutoCloseable {
                 }
             }
         } catch (Exception e) {
-            BotLogger.error(new BotLogger.LogMessageOrigin(player), "Ignored exception during map generation", e);
+            BotLogger.error(new LogOrigin(player), "Ignored exception during map generation", e);
         }
     }
 
@@ -1793,7 +2000,7 @@ public class MapGenerator implements AutoCloseable {
 
         for (Objective objective : objectives) {
             ObjectiveBox box = new ObjectiveBox(x, y, boxWidth, maxTextWidth, scoreTokenSpacing);
-            box.Display(game, graphics, this, objective);
+            box.display(game, graphics, this, objective);
             y += ObjectiveBox.getVerticalSpacing();
         }
 
@@ -1810,7 +2017,7 @@ public class MapGenerator implements AutoCloseable {
         boxWidth = ObjectiveBox.getBoxWidth(game, maxTextWidth, scoreTokenSpacing);
         for (Objective objective : objectives) {
             ObjectiveBox box = new ObjectiveBox(x, y, boxWidth, maxTextWidth, scoreTokenSpacing);
-            box.Display(game, graphics, this, objective);
+            box.display(game, graphics, this, objective);
             y += ObjectiveBox.getVerticalSpacing();
         }
 
@@ -1824,7 +2031,7 @@ public class MapGenerator implements AutoCloseable {
         boxWidth = ObjectiveBox.getBoxWidth(game, maxTextWidth, scoreTokenSpacing);
         for (Objective objective : objectives) {
             ObjectiveBox box = new ObjectiveBox(x, y, boxWidth, maxTextWidth, scoreTokenSpacing);
-            box.Display(game, graphics, this, objective);
+            box.display(game, graphics, this, objective);
             y += ObjectiveBox.getVerticalSpacing();
         }
 
@@ -1859,8 +2066,9 @@ public class MapGenerator implements AutoCloseable {
             if (agendaTitle == null) {
                 agendaTitle = Mapper.getAgendaJustNames().get(lawID);
             }
-            if (optionalText != null && !optionalText.isEmpty()
-                && game.getPlayerFromColorOrFaction(optionalText) == null) {
+            if (optionalText != null
+                    && !optionalText.isEmpty()
+                    && game.getPlayerFromColorOrFaction(optionalText) == null) {
                 agendaTitle += "   [" + optionalText + "]";
             }
             graphics.drawString(agendaTitle, x + 95, y + 33);
@@ -1892,8 +2100,9 @@ public class MapGenerator implements AutoCloseable {
             try {
                 String agendaType = Mapper.getAgendaType(lawID);
 
-                if (optionalText == null || optionalText.isEmpty()
-                    || game.getPlayerFromColorOrFaction(optionalText) == null) {
+                if (optionalText == null
+                        || optionalText.isEmpty()
+                        || game.getPlayerFromColorOrFaction(optionalText) == null) {
                     paintAgendaIcon(y, x);
                 } else if ("0".equals(agendaType)) {
                     Player electedPlayer = null;
@@ -1913,27 +2122,31 @@ public class MapGenerator implements AutoCloseable {
                         DrawingUtil.drawPlayerFactionIconImage(graphics, electedPlayer, x + 2, y + 2, 95, 95);
                     }
                 }
-                if (!game.getStoredValue("controlTokensOnAgenda" + lawEntry.getValue()).isEmpty()) {
+                if (!game.getStoredValue("controlTokensOnAgenda" + lawEntry.getValue())
+                        .isEmpty()) {
                     int tokenDeltaY = 0;
                     int count = 0;
                     for (String debtToken : game.getStoredValue("controlTokensOnAgenda" + lawEntry.getValue())
-                        .split("_")) {
+                            .split("_")) {
 
-                        boolean hideFactionIcon = isFoWPrivate && !FoWHelper.canSeeStatsOfPlayer(
-                            game,
-                            game.getPlayerFromColorOrFaction(debtToken), fowPlayer);
-                        String controlID = hideFactionIcon ? Mapper.getControlID("gray")
-                            : Mapper.getControlID(debtToken);
+                        boolean hideFactionIcon = isFoWPrivate
+                                && !FoWHelper.canSeeStatsOfPlayer(
+                                        game, game.getPlayerFromColorOrFaction(debtToken), fowPlayer);
+                        String controlID =
+                                hideFactionIcon ? Mapper.getControlID("gray") : Mapper.getControlID(debtToken);
                         if (controlID.contains("null")) {
                             continue;
                         }
                         float scale = 0.80f;
                         BufferedImage controlTokenImage = ImageHelper.readScaled(Mapper.getCCPath(controlID), scale);
                         DrawingUtil.drawControlToken(
-                            graphics, controlTokenImage,
-                            game.getPlayerFromColorOrFaction(debtToken), x + (count / 3) * 55,
-                            y + tokenDeltaY - (count / 3) * 90,
-                            hideFactionIcon, scale);
+                                graphics,
+                                controlTokenImage,
+                                game.getPlayerFromColorOrFaction(debtToken),
+                                x + (count / 3) * 55,
+                                y + tokenDeltaY - (count / 3) * 90,
+                                hideFactionIcon,
+                                scale);
                         tokenDeltaY += 30;
                         count += 1;
                     }
@@ -2044,10 +2257,10 @@ public class MapGenerator implements AutoCloseable {
             int x = positionPoint.x;
             int y = positionPoint.y;
 
-            if (!"tl".equalsIgnoreCase(position) &&
-                !"tr".equalsIgnoreCase(position) &&
-                !"bl".equalsIgnoreCase(position) &&
-                !"br".equalsIgnoreCase(position)) {
+            if (!"tl".equalsIgnoreCase(position)
+                    && !"tr".equalsIgnoreCase(position)
+                    && !"bl".equalsIgnoreCase(position)
+                    && !"br".equalsIgnoreCase(position)) {
                 minX = Math.min(minX, x);
                 minY = Math.min(minY, y);
                 maxX = Math.max(maxX, x);
@@ -2066,8 +2279,7 @@ public class MapGenerator implements AutoCloseable {
             aggregateGlobalUnitCoordinates(tileGenerator, tileX, tileY);
         } catch (Exception exception) {
             BotLogger.error(
-                "Tile Error, when building map `" + game.getName() + "`, tile: " + tile.getTileID(),
-                exception);
+                    "Tile Error, when building map `" + game.getName() + "`, tile: " + tile.getTileID(), exception);
         }
     }
 
@@ -2076,7 +2288,7 @@ public class MapGenerator implements AutoCloseable {
      * @param game
      * @return between 3 and 8 (bounds based on constants)
      */
-    public static int getRingCount(Game game) {
+    private static int getRingCount(Game game) {
         return Math.max(Math.min(game.getRingCount(), RING_MAX_COUNT), RING_MIN_COUNT);
     }
 
@@ -2111,7 +2323,10 @@ public class MapGenerator implements AutoCloseable {
      */
     private static int getMapWidth(Game game) {
         float ringCount = getRingCount(game);
-        ringCount += ringCount == RING_MIN_COUNT ? 1.5f : 1; // make it thick if it's a 3-ring? why? player areas? // also 1.5 * 3 > 1 * 4, weird! 1.5f -> 1.33f?
+        ringCount += ringCount == RING_MIN_COUNT
+                ? 1.5f
+                : 1; // make it thick if it's a 3-ring? why? player areas? // also 1.5 * 3 > 1 * 4, weird! 1.5f ->
+        // 1.33f?
         int leftMost = PositionMapper.getLeftMostTileOffsetInGame(game);
         int rightMost = PositionMapper.getRightMostTileOffsetInGame(game);
         int leftToRightDistance = rightMost - leftMost;
@@ -2121,8 +2336,8 @@ public class MapGenerator implements AutoCloseable {
         return mapWidth;
     }
 
-    protected static int getMaxObjectiveWidth(Game game) {
-        return (MapGenerator.getMapWidth(game) - MapGenerator.SPACING_BETWEEN_OBJECTIVE_TYPES * 4) / 3;
+    static int getMaxObjectiveWidth(Game game) {
+        return (getMapWidth(game) - SPACING_BETWEEN_OBJECTIVE_TYPES * 4) / 3;
     }
 
     // The first parameter is the scale factor (contrast), the second is the offset
@@ -2133,7 +2348,7 @@ public class MapGenerator implements AutoCloseable {
         return op.filter(image, null);
     }
 
-    void addWebsiteOverlay(String overlayTitle, String overlayText, int x, int y, int width, int height) {
+    private void addWebsiteOverlay(String overlayTitle, String overlayText, int x, int y, int width, int height) {
         addWebsiteOverlay(websiteOverlays, overlayTitle, overlayText, x, y, width, height);
     }
 
@@ -2142,16 +2357,12 @@ public class MapGenerator implements AutoCloseable {
     }
 
     public static void addWebsiteOverlay(
-        List<WebsiteOverlay> overlays, ModelInterface dataModel, int x, int y,
-        int width, int height
-    ) {
+            List<WebsiteOverlay> overlays, ModelInterface dataModel, int x, int y, int width, int height) {
         overlays.add(new WebsiteOverlay(dataModel, List.of(x, y, width, height)));
     }
 
     public static void addWebsiteOverlay(
-        List<WebsiteOverlay> overlays, String title, String text, int x, int y, int w,
-        int h
-    ) {
+            List<WebsiteOverlay> overlays, String title, String text, int x, int y, int w, int h) {
         overlays.add(new WebsiteOverlay(title, text, List.of(x, y, w, h)));
     }
 
@@ -2186,13 +2397,13 @@ public class MapGenerator implements AutoCloseable {
 
                     // Apply global translation to each coordinate
                     List<Point> globalCoordinates = coordinates.stream()
-                        .map(point -> new Point(point.x + tileX, point.y + tileY))
-                        .collect(Collectors.toList());
+                            .map(point -> new Point(point.x + tileX, point.y + tileY))
+                            .toList();
 
                     globalUnitCoordinatesByFaction
-                        .computeIfAbsent(faction, k -> new HashMap<>())
-                        .computeIfAbsent(unitId, k -> new ArrayList<>())
-                        .addAll(globalCoordinates);
+                            .computeIfAbsent(faction, k -> new HashMap<>())
+                            .computeIfAbsent(unitId, k -> new ArrayList<>())
+                            .addAll(globalCoordinates);
                 }
             }
         }
