@@ -1,5 +1,11 @@
 package ti4.map_ttpg;
 
+import com.fasterxml.jackson.core.JacksonException;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.ObjectWriter;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -14,14 +20,6 @@ import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
-import com.fasterxml.jackson.core.JacksonException;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectWriter;
-import com.fasterxml.jackson.databind.SerializationFeature;
-
 import ti4.commands.tokens.AddTokenCommand;
 import ti4.helpers.AliasHandler;
 import ti4.helpers.Constants;
@@ -33,75 +31,76 @@ import ti4.map.Game;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
-import ti4.map.manage.GameManager;
-import ti4.message.BotLogger;
+import ti4.map.persistence.GameManager;
+import ti4.message.logging.BotLogger;
 
+@Deprecated // old and probably broken
 public class ConvertTTPGtoAsync {
 
     private static final List<String> validColors = new ArrayList<>() {
         {
-            add("W"); //White
-            add("B"); //Blue
-            add("P"); //Purple
-            add("Y"); //Yellow
-            add("R"); //Red
-            add("G"); //Green
-            add("E"); //Orange
-            add("K"); //Pink
+            add("W"); // White
+            add("B"); // Blue
+            add("P"); // Purple
+            add("Y"); // Yellow
+            add("R"); // Red
+            add("G"); // Green
+            add("E"); // Orange
+            add("K"); // Pink
         }
     };
 
     private static final List<String> validUnits = new ArrayList<>() {
         {
-            add("c"); //carrier
-            add("d"); //dreadnought
-            add("f"); //fighter
-            add("h"); //flagship
-            add("i"); //infantry
-            add("m"); //mech
-            add("o"); //control_token
-            add("p"); //pds
-            add("r"); //cruiser
-            add("s"); //space_dock
-            add("t"); //command_token
-            add("w"); //war_sun
-            add("y"); //destroyer
+            add("c"); // carrier
+            add("d"); // dreadnought
+            add("f"); // fighter
+            add("h"); // flagship
+            add("i"); // infantry
+            add("m"); // mech
+            add("o"); // control_token
+            add("p"); // pds
+            add("r"); // cruiser
+            add("s"); // space_dock
+            add("t"); // command_token
+            add("w"); // war_sun
+            add("y"); // destroyer
         }
     };
 
     private static final List<String> validAttachments = new ArrayList<>() {
         {
-            add("C"); //cybernetic_research_facility_face
-            add("I"); //biotic_research_facility_face
-            add("O"); //propulsion_research_facility_face
-            add("W"); //warfare_research_facility_face
-            add("a"); //alpha_wormhole
-            add("b"); //beta_wormhole
-            add("c"); //cybernetic_Research_Facility_back
-            add("d"); //dyson_sphere
-            add("e"); //frontier
-            add("f"); //nano_forge
-            add("g"); //gamma_wormhole
-            add("h"); //grav_tear
-            add("i"); //biotic_research_facility_back
-            add("j"); //tomb_of_emphidia
-            add("k"); //mirage
-            add("l"); //stellar_converter
-            add("m"); //mining_world
-            add("n"); //ion_storm
-            add("o"); //propulsion_research_facility_back
-            add("p"); //paradise_world
-            add("q"); //ul_sleeper
-            add("r"); //rich_world
-            add("t"); //ul_terraform
-            add("u"); //ul_geoform
-            add("w"); //warfare_research_facility_back
-            add("x"); //lazax_survivors
-            add("z"); //dmz
+            add("C"); // cybernetic_research_facility_face
+            add("I"); // biotic_research_facility_face
+            add("O"); // propulsion_research_facility_face
+            add("W"); // warfare_research_facility_face
+            add("a"); // alpha_wormhole
+            add("b"); // beta_wormhole
+            add("c"); // cybernetic_Research_Facility_back
+            add("d"); // dyson_sphere
+            add("e"); // frontier
+            add("f"); // nano_forge
+            add("g"); // gamma_wormhole
+            add("h"); // grav_tear
+            add("i"); // biotic_research_facility_back
+            add("j"); // tomb_of_emphidia
+            add("k"); // mirage
+            add("l"); // stellar_converter
+            add("m"); // mining_world
+            add("n"); // ion_storm
+            add("o"); // propulsion_research_facility_back
+            add("p"); // paradise_world
+            add("q"); // ul_sleeper
+            add("r"); // rich_world
+            add("t"); // ul_terraform
+            add("u"); // ul_geoform
+            add("w"); // warfare_research_facility_back
+            add("x"); // lazax_survivors
+            add("z"); // dmz
         }
     };
 
-    public static final Map<String, String> fakePlayers = new HashMap<>() {
+    private static final Map<String, String> fakePlayers = new HashMap<>() {
         {
             put(Constants.prisonerOneId, "PrisonerOne");
             put(Constants.tspId, "Holytispoon");
@@ -119,7 +118,7 @@ public class ConvertTTPGtoAsync {
         }
     };
 
-    //Uncomment main for debugging locally without running the bot
+    // Uncomment main for debugging locally without running the bot
     // public static void main(String[] args) throws Exception {
     //     PositionMapper.init();
     //     Mapper.init();
@@ -143,7 +142,8 @@ public class ConvertTTPGtoAsync {
             File file = Storage.getTTPGExportStorage(filename);
             TTPGMap ttpgMap = getTTPGMapFromJsonFile(file);
             if (ttpgMap == null) {
-                BotLogger.warning("TTPG Import Failed:\n> filename: " + filename + " is not valid TTPG export JSON format");
+                BotLogger.warning(
+                        "TTPG Import Failed:\n> filename: " + filename + " is not valid TTPG export JSON format");
                 return false;
             }
             Game game = ConvertTTPGMaptoAsyncMap(ttpgMap, gamename);
@@ -155,7 +155,7 @@ public class ConvertTTPGtoAsync {
         return true;
     }
 
-    public static Game ConvertTTPGMaptoAsyncMap(TTPGMap ttpgMap, String gameName) {
+    private static Game ConvertTTPGMaptoAsyncMap(TTPGMap ttpgMap, String gameName) {
         Mapper.init();
         Game asyncGame = new Game() {
             {
@@ -168,50 +168,53 @@ public class ConvertTTPGtoAsync {
             }
         };
 
-        //ADD STAGE 1 PUBLIC OBJECTIVES
+        // ADD STAGE 1 PUBLIC OBJECTIVES
         for (String objective : ttpgMap.getObjectives().getPublicObjectivesI()) {
             asyncGame.addSpecificStage1(AliasHandler.resolveObjective(objective));
         }
 
-        //ADD STAGE 2 PUBLIC OBJECTIVES
+        // ADD STAGE 2 PUBLIC OBJECTIVES
         for (String objective : ttpgMap.getObjectives().getPublicObjectivesII()) {
             asyncGame.addSpecificStage2(AliasHandler.resolveObjective(objective));
         }
 
-        //ADD CUSTOM PUBLIC OBJECTIVES FROM AGENDAS
+        // ADD CUSTOM PUBLIC OBJECTIVES FROM AGENDAS
         for (String objective : ttpgMap.getObjectives().getAgenda()) {
             asyncGame.addCustomPO(objective, 1);
-            //asyncMap.addLaw(null, objective); TODO: if point from Law, make sure law is added
+            // asyncMap.addLaw(null, objective); TODO: if point from Law, make sure law is added
         }
 
-        //ADD CUSTOM PUBLIC OBJECTIVES FROM RELICS
+        // ADD CUSTOM PUBLIC OBJECTIVES FROM RELICS
         for (String objective : ttpgMap.getObjectives().getRelics()) {
             asyncGame.addCustomPO(objective, 1);
         }
 
-        //ADD CUSTOM PUBLIC OBJECTIVES FROM OTHER SOURCES
+        // ADD CUSTOM PUBLIC OBJECTIVES FROM OTHER SOURCES
         // for (String objective : ttpgMap.getObjectives().getOther()) {
         //     asyncMap.addCustomPO(objective, 1);
         // }
 
-        //EMPTY MAP FOR <AgendaName, Faction> to add Laws later
+        // EMPTY MAP FOR <AgendaName, Faction> to add Laws later
         Map<String, String> electedPlayers = new HashMap<>();
 
-        //PLAYER ORDER MAPPING
+        // PLAYER ORDER MAPPING
         // TTPG player array starts in bottom right and goes clockwise
         // Async player array starts at top and goes clockwise
         // for 6 player games, need to shift ttpgPlayers 2 right - i.e. 0,1,2,3,4,5 -> 4,5,0,1,2,3
 
-        //PLAYERS
+        // PLAYERS
         int index = ttpgMap.getPlayers().size() - 2;
         for (Entry<String, String> fakePlayer : fakePlayers.entrySet()) {
             asyncGame.addPlayer(fakePlayer.getKey(), fakePlayer.getValue());
             Player asyncPlayer = asyncGame.getPlayer(fakePlayer.getKey());
             TTPGPlayer ttpgPlayer = ttpgMap.getPlayers().get(index);
 
-            //PLAYER STATS
-            asyncPlayer.setFaction(asyncGame, AliasHandler.resolveFaction(ttpgPlayer.getFactionShort().toLowerCase()));
-            asyncPlayer.setColor(AliasHandler.resolveColor(ttpgPlayer.getColorActual().toLowerCase()));
+            // PLAYER STATS
+            asyncPlayer.setFaction(
+                    asyncGame,
+                    AliasHandler.resolveFaction(ttpgPlayer.getFactionShort().toLowerCase()));
+            asyncPlayer.setColor(
+                    AliasHandler.resolveColor(ttpgPlayer.getColorActual().toLowerCase()));
             asyncPlayer.setCommodities(ttpgPlayer.getCommodities());
             asyncPlayer.setCommoditiesBase(ttpgPlayer.getMaxCommodities());
             asyncPlayer.setTg(ttpgPlayer.getTradeGoods());
@@ -219,22 +222,24 @@ public class ConvertTTPGtoAsync {
             asyncPlayer.setFleetCC(ttpgPlayer.getCommandTokens().getFleet());
             asyncPlayer.setStrategicCC(ttpgPlayer.getCommandTokens().getStrategy());
 
-            //PLAYER STRATEGY CARDS
+            // PLAYER STRATEGY CARDS
             if (!ttpgPlayer.getStrategyCards().isEmpty()) {
                 String ttpgSC = (String) ttpgPlayer.getStrategyCards().getFirst();
                 if (Objects.nonNull(ttpgSC)) asyncPlayer.addSC(Helper.getSCNumber(ttpgSC));
             }
             if (!ttpgPlayer.getStrategyCardsFaceDown().isEmpty()) {
-                String ttpgSCplayed = (String) ttpgPlayer.getStrategyCardsFaceDown().getFirst();
+                String ttpgSCplayed =
+                        (String) ttpgPlayer.getStrategyCardsFaceDown().getFirst();
                 if (Objects.nonNull(ttpgSCplayed)) asyncGame.setSCPlayed(Helper.getSCNumber(ttpgSCplayed), true);
             }
 
-            //PLAYER SCORED OBJECTIVES
+            // PLAYER SCORED OBJECTIVES
             for (String ttpgScoredObjective : ttpgPlayer.getObjectives()) {
                 String asyncScoredObjective = AliasHandler.resolveObjective(ttpgScoredObjective);
                 if (asyncGame.getSecretObjectives().contains(asyncScoredObjective)) {
                     asyncPlayer.setSecret(asyncScoredObjective);
-                    for (Entry<String, Integer> secretObjective : asyncPlayer.getSecrets().entrySet()) {
+                    for (Entry<String, Integer> secretObjective :
+                            asyncPlayer.getSecrets().entrySet()) {
                         if (secretObjective.getKey().equalsIgnoreCase(asyncScoredObjective)) {
                             asyncPlayer.setSecretScored(asyncScoredObjective, secretObjective.getValue());
                             asyncPlayer.removeSecret(secretObjective.getValue());
@@ -242,13 +247,15 @@ public class ConvertTTPGtoAsync {
                     }
 
                 } else if (asyncGame.getRevealedPublicObjectives().containsKey(asyncScoredObjective)) {
-                    for (Entry<String, Integer> revealedObjective : asyncGame.getRevealedPublicObjectives().entrySet()) {
+                    for (Entry<String, Integer> revealedObjective :
+                            asyncGame.getRevealedPublicObjectives().entrySet()) {
                         if (asyncScoredObjective.equalsIgnoreCase(revealedObjective.getKey())) {
                             asyncGame.scorePublicObjective(asyncPlayer.getUserID(), revealedObjective.getValue());
                         }
                     }
                 } else if (asyncGame.getCustomPublicVP().containsKey(ttpgScoredObjective)) {
-                    for (Entry<String, Integer> customObjective : asyncGame.getCustomPublicVP().entrySet()) {
+                    for (Entry<String, Integer> customObjective :
+                            asyncGame.getCustomPublicVP().entrySet()) {
                         if (ttpgScoredObjective.equalsIgnoreCase(customObjective.getKey())) {
                             asyncGame.scorePublicObjective(asyncPlayer.getUserID(), customObjective.getValue());
                         }
@@ -256,62 +263,81 @@ public class ConvertTTPGtoAsync {
                 }
             }
 
-            //PLAYER LAWS ELECTED
+            // PLAYER LAWS ELECTED
             for (String ttpgLaw : ttpgPlayer.getLaws()) {
                 String asyncLaw = AliasHandler.resolveAgenda(ttpgLaw);
                 electedPlayers.put(asyncLaw, asyncPlayer.getFaction());
                 if ("warrant".equals(asyncLaw)) asyncPlayer.flipSearchWarrant();
             }
 
-            //PLAYER SUPPORT FOR THE THRONE
+            // PLAYER SUPPORT FOR THE THRONE
             for (String objective : ttpgPlayer.getObjectives()) {
                 if (objective.startsWith("Support for the Throne")) {
                     asyncPlayer.addPromissoryNoteToPlayArea(AliasHandler.resolvePromissory(objective));
                 }
             }
 
-            //PLAYER PLANETS
+            // PLAYER PLANETS
             for (String planet : ttpgPlayer.getPlanetCards()) {
                 asyncPlayer.addPlanet(AliasHandler.resolvePlanet(planet.toLowerCase()));
             }
 
-            //PLAYER LEADERS
+            // PLAYER LEADERS
             if (!"keleres".equals(asyncPlayer.getFaction()) && !"nomad".equals(asyncPlayer.getFaction())) {
-                // asyncPlayer.unsafeGetLeader("agent").setLocked(ttpgPlayer.getLeaders().getAgent().equals("unlocked") ? false : true);
-                asyncPlayer.unsafeGetLeader("commander").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getCommander()));
-                asyncPlayer.unsafeGetLeader("hero").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
+                // asyncPlayer.unsafeGetLeader("agent").setLocked(ttpgPlayer.getLeaders().getAgent().equals("unlocked")
+                // ? false : true);
+                asyncPlayer
+                        .unsafeGetLeader("commander")
+                        .setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getCommander()));
+                asyncPlayer
+                        .unsafeGetLeader("hero")
+                        .setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
             } else if ("keleres".equals(asyncPlayer.getFaction())) {
                 String subFaction = ttpgPlayer.getFactionShort().toLowerCase();
                 switch (subFaction) {
                     case "keleres - argent" -> {
                         System.out.println(subFaction);
-                        asyncPlayer.unsafeGetLeader("kuuasi").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
+                        asyncPlayer
+                                .unsafeGetLeader("kuuasi")
+                                .setLocked(!"unlocked"
+                                        .equals(ttpgPlayer.getLeaders().getHero()));
                         asyncPlayer.removeLeader("odlynn");
                         asyncPlayer.removeLeader("harka");
                     }
                     case "keleres - xxcha" -> {
                         System.out.println(subFaction);
-                        asyncPlayer.unsafeGetLeader("odlynn").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
+                        asyncPlayer
+                                .unsafeGetLeader("odlynn")
+                                .setLocked(!"unlocked"
+                                        .equals(ttpgPlayer.getLeaders().getHero()));
                         asyncPlayer.removeLeader("kuuasi");
                         asyncPlayer.removeLeader("harka");
                     }
                     case "keleres - mentak" -> {
                         System.out.println(subFaction);
-                        asyncPlayer.unsafeGetLeader("harka").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
+                        asyncPlayer
+                                .unsafeGetLeader("harka")
+                                .setLocked(!"unlocked"
+                                        .equals(ttpgPlayer.getLeaders().getHero()));
                         asyncPlayer.removeLeader("kuuasi");
                         asyncPlayer.removeLeader("odlynn");
                     }
                 }
-            } else if ("nomad".equals(asyncPlayer.getFaction())) { //need an example before we do this
-                // asyncPlayer.getLeader("agent").setLocked(ttpgPlayer.getLeaders().getAgent().equals("unlocked") ? false : true);
-                asyncPlayer.unsafeGetLeader("commander").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getCommander()));
-                asyncPlayer.unsafeGetLeader("hero").setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
+            } else if ("nomad".equals(asyncPlayer.getFaction())) { // need an example before we do this
+                // asyncPlayer.getLeader("agent").setLocked(ttpgPlayer.getLeaders().getAgent().equals("unlocked") ?
+                // false : true);
+                asyncPlayer
+                        .unsafeGetLeader("commander")
+                        .setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getCommander()));
+                asyncPlayer
+                        .unsafeGetLeader("hero")
+                        .setLocked(!"unlocked".equals(ttpgPlayer.getLeaders().getHero()));
             }
 
-            //PURGE HERO IF PURGED
+            // PURGE HERO IF PURGED
             if ("purged".equals(ttpgPlayer.getLeaders().getHero())) asyncPlayer.removeLeader(Constants.HERO);
 
-            //PLAYER CUSTODIAN POINTS
+            // PLAYER CUSTODIAN POINTS
             Integer ttpgCustodianPoints = ttpgPlayer.getCustodiansPoints();
             if (ttpgCustodianPoints > 0) {
                 while (ttpgCustodianPoints > 0) {
@@ -320,21 +346,21 @@ public class ConvertTTPGtoAsync {
                 }
             }
 
-            //PLAYER TECHS
+            // PLAYER TECHS
             for (String technology : ttpgPlayer.getTechnologies()) {
                 asyncPlayer.addTech(AliasHandler.resolveTech(technology.toLowerCase()));
             }
 
-            //PLAYER RELICS
+            // PLAYER RELICS
             for (String relic : ttpgPlayer.getRelicCards()) {
                 asyncPlayer.addRelic(AliasHandler.resolveRelic(relic));
                 asyncGame.getAllRelics().remove(AliasHandler.resolveRelic(relic));
             }
 
-            //CLEAN PLAYER HANDCARDS
+            // CLEAN PLAYER HANDCARDS
             asyncPlayer.clearPromissoryNotes();
 
-            //PLAYER HANDCARDS and TABLECARDS
+            // PLAYER HANDCARDS and TABLECARDS
             List<String> handAndTableCards = new ArrayList<>() {
                 {
                     addAll(ttpgPlayer.getHandCards());
@@ -352,20 +378,18 @@ public class ConvertTTPGtoAsync {
                 }
             }
 
-            //PLAYER ALLIANCES
+            // PLAYER ALLIANCES
             for (String alliance : ttpgPlayer.getAlliances()) {
                 asyncPlayer.addPromissoryNoteToPlayArea(AliasHandler.resolvePromissory(alliance + "_an"));
             }
 
-            //INDEX
-            if (index == ttpgMap.getPlayers().size() - 1)
-                index = 0;
-            else
-                index++; //shift ttpgPlayer array to match Async array
+            // INDEX
+            if (index == ttpgMap.getPlayers().size() - 1) index = 0;
+            else index++; // shift ttpgPlayer array to match Async array
             if (asyncGame.getPlayers().size() == asyncGame.getPlayerCountForMap()) break;
         }
 
-        //ADD TILES -> PARSE HEX SUMMARY
+        // ADD TILES -> PARSE HEX SUMMARY
         String[] hexSummary = ttpgMap.getHexSummary().split(",");
         for (String hex : hexSummary) {
             System.out.println("Hex: " + hex);
@@ -381,7 +405,7 @@ public class ConvertTTPGtoAsync {
             }
         }
 
-        //ADD CONTROL TOKENS
+        // ADD CONTROL TOKENS
         for (Tile tile : asyncGame.getTileMap().values()) {
             for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
                 for (Player player : asyncGame.getPlayers().values()) {
@@ -437,7 +461,7 @@ public class ConvertTTPGtoAsync {
         };
         asyncGame.setDiscardAgendas(agendaDiscards);
 
-        //ADD LAWS
+        // ADD LAWS
         for (String law : ttpgLawsInPlay) {
             int agendaID = asyncGame.getDiscardAgendas().get(AliasHandler.resolveAgenda(law));
             String electedFaction = electedPlayers.get(AliasHandler.resolveAgenda(law));
@@ -445,10 +469,14 @@ public class ConvertTTPGtoAsync {
         }
 
         // EXPLORATION DECK
-        List<String> ttpgExploreCulturalCards = ttpgMap.getDecks().getCardExplorationCultural().getDeck();
-        List<String> ttpgExploreHazardousCards = ttpgMap.getDecks().getCardExplorationHazardous().getDeck();
-        List<String> ttpgExploreIndustrialCards = ttpgMap.getDecks().getCardExplorationIndustrial().getDeck();
-        List<String> ttpgExploreFrontierCards = ttpgMap.getDecks().getCardExplorationFrontier().getDeck();
+        List<String> ttpgExploreCulturalCards =
+                ttpgMap.getDecks().getCardExplorationCultural().getDeck();
+        List<String> ttpgExploreHazardousCards =
+                ttpgMap.getDecks().getCardExplorationHazardous().getDeck();
+        List<String> ttpgExploreIndustrialCards =
+                ttpgMap.getDecks().getCardExplorationIndustrial().getDeck();
+        List<String> ttpgExploreFrontierCards =
+                ttpgMap.getDecks().getCardExplorationFrontier().getDeck();
         List<String> exploreCards = new ArrayList<>() {
             {
                 if (Objects.nonNull(ttpgExploreCulturalCards)) addAll(ttpgExploreCulturalCards);
@@ -462,10 +490,14 @@ public class ConvertTTPGtoAsync {
         asyncGame.setExploreDeck(exploreCards);
 
         // EXPLORATION DISCARD
-        List<String> ttpgExploreCulturalDiscards = ttpgMap.getDecks().getCardExplorationCultural().getDiscard();
-        List<String> ttpgExploreHazardousDiscards = ttpgMap.getDecks().getCardExplorationHazardous().getDiscard();
-        List<String> ttpgExploreIndustrialDiscards = ttpgMap.getDecks().getCardExplorationIndustrial().getDiscard();
-        List<String> ttpgExploreFrontierDiscards = ttpgMap.getDecks().getCardExplorationFrontier().getDiscard();
+        List<String> ttpgExploreCulturalDiscards =
+                ttpgMap.getDecks().getCardExplorationCultural().getDiscard();
+        List<String> ttpgExploreHazardousDiscards =
+                ttpgMap.getDecks().getCardExplorationHazardous().getDiscard();
+        List<String> ttpgExploreIndustrialDiscards =
+                ttpgMap.getDecks().getCardExplorationIndustrial().getDiscard();
+        List<String> ttpgExploreFrontierDiscards =
+                ttpgMap.getDecks().getCardExplorationFrontier().getDiscard();
         List<String> exploreDiscards = new ArrayList<>() {
             {
                 if (Objects.nonNull(ttpgExploreCulturalDiscards)) addAll(ttpgExploreCulturalDiscards);
@@ -548,12 +580,12 @@ public class ConvertTTPGtoAsync {
         }
     }
 
-    public static Tile ConvertTTPGHexToAsyncTile(Game asyncGame, String ttpgHex) {
+    private static Tile ConvertTTPGHexToAsyncTile(Game asyncGame, String ttpgHex) {
         // System.out.println(" Examining hex summary:  " + ttpgHex);
 
         // TILE +-X +-Y SPACE ; PLANET1 ; PLANET2 ; ...
         Pattern firstRegionPattern = Pattern.compile("^([0-9AB]+)([-+][0-9]+)([-+][0-9]+)(.*)?$");
-        //Pattern rotPattern = Pattern.compile("^(\\d+)([AB])(\\d)$"); //ignore hyperlanes for now
+        // Pattern rotPattern = Pattern.compile("^(\\d+)([AB])(\\d)$"); //ignore hyperlanes for now
         Pattern regionAttachmentsPattern = Pattern.compile("^(.*)\\*(.*)$");
 
         Matcher matcher = firstRegionPattern.matcher(ttpgHex);
@@ -577,18 +609,18 @@ public class ConvertTTPGtoAsync {
 
         String asyncPosition = AliasHandler.resolveTTPGPosition(ttpgPosition);
 
-        //Handle special cases, tiles to go in TL/TR/BL/BR
+        // Handle special cases, tiles to go in TL/TR/BL/BR
         switch (tileID) {
-            //TODO: smart placement of mallice/whdelta/nombox
-            case "82" -> { //Mallice
-                tileID = "82b"; //TODO: If 82 hasunits or control, then 82b, otherwise, 82a
-                asyncPosition = "tl"; //hardcode top left for now
+            // TODO: smart placement of mallice/whdelta/nombox
+            case "82" -> { // Mallice
+                tileID = "82b"; // TODO: If 82 hasunits or control, then 82b, otherwise, 82a
+                asyncPosition = "tl"; // hardcode top left for now
             }
-            case "51" -> //Creuss
-                //TODO: move DeltaWH if exists in tileList
-                asyncPosition = "tr"; //hardcode top right for now
-            case "17" -> { //DeltaWH
-                //TODO: move Creuss if exists in tileList - i.e. if 17 is near BL, put 51 in BL
+            case "51" -> // Creuss
+                // TODO: move DeltaWH if exists in tileList
+                asyncPosition = "tr"; // hardcode top right for now
+            case "17" -> { // DeltaWH
+                // TODO: move Creuss if exists in tileList - i.e. if 17 is near BL, put 51 in BL
             }
         }
 
@@ -597,7 +629,7 @@ public class ConvertTTPGtoAsync {
             return null;
         }
 
-        //PER REGION/PLANET/UNITHOLDER
+        // PER REGION/PLANET/UNITHOLDER
         Tile tile = new Tile(tileID, asyncPosition);
         String tileContents = matcher.group(4);
         int index = 0;
@@ -607,7 +639,7 @@ public class ConvertTTPGtoAsync {
             boolean regionIsSpace = index == 0;
             boolean regionIsPlanet = index > 0;
 
-            String planetAlias = tileID + "_" + index; //unique planet ID in planet_alias.properties
+            String planetAlias = tileID + "_" + index; // unique planet ID in planet_alias.properties
             String planet = AliasHandler.resolvePlanet(planetAlias);
 
             if (regionIsSpace) {
@@ -617,7 +649,7 @@ public class ConvertTTPGtoAsync {
                 System.out.println("         contents: " + regionContents);
             }
 
-            //Find attachments, and split off region
+            // Find attachments, and split off region
             Matcher matcherAttachments = regionAttachmentsPattern.matcher(regionContents);
             boolean hasAttachments = matcherAttachments.find();
             String attachments;
@@ -627,8 +659,11 @@ public class ConvertTTPGtoAsync {
                 attachments = matcherAttachments.group(2);
                 for (char attachment : attachments.toCharArray()) {
                     if (!validAttachments.contains(String.valueOf(attachment))) {
-                        String attachment_proper = attachment + (Character.isUpperCase(attachment) ? "_cap" : ""); //bypass AliasHandler's toLowercase'ing
-                        String attachmentResolved = AliasHandler.resolveTTPGAttachment(attachment_proper);
+                        String attachmentProper = attachment
+                                + (Character.isUpperCase(attachment)
+                                        ? "_cap"
+                                        : ""); // bypass AliasHandler's toLowercase'ing
+                        String attachmentResolved = AliasHandler.resolveTTPGAttachment(attachmentProper);
                         System.out.println("          - " + attachment + ": " + attachmentResolved);
 
                         String attachmentFileName = Mapper.getAttachmentImagePath(attachmentResolved);
@@ -653,20 +688,20 @@ public class ConvertTTPGtoAsync {
                     } else {
                         System.out.println("                character not recognized:  " + attachment);
                     }
-
                 }
             }
 
             String color = "";
             Integer regionCount = 1;
 
-            //DECODE REGION STRING, CHAR BY CHAR
+            // DECODE REGION STRING, CHAR BY CHAR
             for (int i = 0; i < regionContents.length(); i++) {
                 char chr = regionContents.charAt(i);
                 String str = Character.toString(chr);
 
-                if (validColors.contains(str)) { //is a new Color, signify a new set of player's units //MAY ALSO BE AN ATTACHMENT???
-                    //reset color & count
+                if (validColors.contains(
+                        str)) { // is a new Color, signify a new set of player's units //MAY ALSO BE AN ATTACHMENT???
+                    // reset color & count
                     color = AliasHandler.resolveColor(str.toLowerCase());
                     regionCount = 1;
 
@@ -677,10 +712,11 @@ public class ConvertTTPGtoAsync {
                     regionCount = Integer.valueOf(str);
 
                 } else if (Character.isLowerCase(chr) && validUnits.contains(str)) { // is a unit, control_token, or CC
-                    if (!color.isEmpty()) { //color hasn't shown up yet, so probably just tokens in space, skip unit crap
-                        if ("t".equals(str)) { //CC
+                    if (!color
+                            .isEmpty()) { // color hasn't shown up yet, so probably just tokens in space, skip unit crap
+                        if ("t".equals(str)) { // CC
                             tile.addCC(Mapper.getCCID(color));
-                        } else if ("o".equals(str)) { //control_token
+                        } else if ("o".equals(str)) { // control_token
                             tile.addToken(Mapper.getControlID(color), AliasHandler.resolvePlanet(planetAlias));
                         } else { // is a unit
                             System.out.println("                unit:  " + AliasHandler.resolveTTPGUnit(str));
@@ -694,12 +730,12 @@ public class ConvertTTPGtoAsync {
                             } else if (regionIsPlanet) {
                                 tile.addUnit(AliasHandler.resolvePlanet(planetAlias), unitID, unitCount);
                             }
-
                         }
                     }
 
-                } else if (validAttachments.contains(str)) { //attachments that were there that didn't match the RegEx above
-                    if ("e".equals(str)) { //frontier token
+                } else if (validAttachments.contains(
+                        str)) { // attachments that were there that didn't match the RegEx above
+                    if ("e".equals(str)) { // frontier token
                         System.out.println("attempt to add frontier token to " + tile.getPosition());
                         // tile.addToken(Mapper.getTokenPath(Constants.FRONTIER), Constants.SPACE);
                         AddTokenCommand.addToken(null, tile, Constants.FRONTIER, null);
@@ -709,7 +745,7 @@ public class ConvertTTPGtoAsync {
                 }
             }
 
-            index++; //next Region/Planet/UnitHolder
+            index++; // next Region/Planet/UnitHolder
         }
 
         return tile;
@@ -728,7 +764,7 @@ public class ConvertTTPGtoAsync {
         return null;
     }
 
-    public static TTPGMap getTTPGMapFromJsonFile(File file) throws Exception {
+    private static TTPGMap getTTPGMapFromJsonFile(File file) throws Exception {
         String jsonSource = readFileAsString(file);
         if (isValid(jsonSource)) {
             JsonNode node = parse(jsonSource);
@@ -737,19 +773,19 @@ public class ConvertTTPGtoAsync {
         return null;
     }
 
-    public static String readFileAsString(String filepath) throws Exception {
-        return new String(Files.readAllBytes(Paths.get(filepath)));
+    private static String readFileAsString(String filepath) throws Exception {
+        return Files.readString(Paths.get(filepath));
     }
 
-    public static String readFileAsString(File file) throws Exception {
-        return new String(Files.readAllBytes(Paths.get(file.getAbsolutePath())));
+    private static String readFileAsString(File file) throws Exception {
+        return Files.readString(Paths.get(file.getAbsolutePath()));
     }
 
-    public static JsonNode parse(String source) throws JsonProcessingException {
+    private static JsonNode parse(String source) throws JsonProcessingException {
         return objectMapper.readTree(source);
     }
 
-    public static boolean isValid(String json) {
+    private static boolean isValid(String json) {
         try {
             objectMapper.readTree(json);
         } catch (JacksonException e) {
@@ -760,7 +796,8 @@ public class ConvertTTPGtoAsync {
 
     private static final ObjectMapper objectMapper = new ObjectMapper();
 
-    public static <A> A fromJson(JsonNode node, Class<A> clazz) throws JsonProcessingException, IllegalArgumentException {
+    private static <A> A fromJson(JsonNode node, Class<A> clazz)
+            throws JsonProcessingException, IllegalArgumentException {
         return objectMapper.treeToValue(node, clazz);
     }
 
@@ -776,10 +813,9 @@ public class ConvertTTPGtoAsync {
         return generateString(node, true);
     }
 
-    public static String generateString(JsonNode node, Boolean prettyPrint) throws JsonProcessingException {
+    private static String generateString(JsonNode node, Boolean prettyPrint) throws JsonProcessingException {
         ObjectWriter objectWriter = objectMapper.writer();
-        if (prettyPrint)
-            objectWriter = objectWriter.with(SerializationFeature.INDENT_OUTPUT);
+        if (prettyPrint) objectWriter = objectWriter.with(SerializationFeature.INDENT_OUTPUT);
         return objectWriter.writeValueAsString(node);
     }
 }
