@@ -1,17 +1,16 @@
 package ti4.service.emoji;
 
 import java.time.temporal.ChronoField;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
-import org.jetbrains.annotations.NotNull;
-
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import net.dv8tion.jda.api.entities.emoji.ApplicationEmoji;
+import org.jetbrains.annotations.NotNull;
 import ti4.json.PersistenceManager;
-import ti4.message.BotLogger;
+import ti4.message.logging.BotLogger;
 
 public class ApplicationEmojiCacheService {
 
@@ -22,8 +21,7 @@ public class ApplicationEmojiCacheService {
         } catch (Exception e) {
             BotLogger.error("Failed to read json data for EmojiCache.", e);
         }
-        if (cache == null)
-            return List.of();
+        if (cache == null) return Collections.emptyList();
         return cache;
     }
 
@@ -61,6 +59,5 @@ public class ApplicationEmojiCacheService {
         public String toString() {
             return name + " " + id + " " + formatted + " " + timeCreated;
         }
-
     }
 }
