@@ -6,9 +6,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-
-import org.apache.commons.lang3.StringUtils;
-
 import lombok.experimental.UtilityClass;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Guild;
@@ -21,6 +18,7 @@ import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.managers.channel.concrete.ThreadChannelManager;
+import org.apache.commons.lang3.StringUtils;
 import ti4.AsyncTI4DiscordBot;
 import ti4.ResourceHelper;
 import ti4.helpers.Constants;
@@ -28,9 +26,10 @@ import ti4.helpers.Helper;
 import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.Player;
-import ti4.map.manage.GameManager;
-import ti4.message.BotLogger;
+import ti4.map.persistence.GameManager;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
+import ti4.message.logging.LogOrigin;
 import ti4.service.async.ReserveGameNumberService;
 import ti4.service.game.CreateGameService;
 import ti4.service.game.HomebrewService;
@@ -39,20 +38,27 @@ import ti4.service.option.FOWOptionService.FOWOption;
 @UtilityClass
 public class CreateFoWGameService {
 
+    private static final int MAX_CHANNELS_MINUS_5 = 495;
+    private static final int MAX_ROLE_COUNT = 250;
+
     @ButtonHandler("createFoWGameChannels")
     public static void createFoWGameChannels(ButtonInteractionEvent event) {
-        MessageHelper.sendMessageToEventChannel(event, event.getUser().getEffectiveName() + " pressed the [Create FoW Game] button.");
+        MessageHelper.sendMessageToEventChannel(
+                event, event.getUser().getEffectiveName() + " pressed the [Create FoW Game] button.");
 
         if (!CreateGameService.isGameCreationAllowed()) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Admins have temporarily turned off game creation, " +
-                "most likely to contain a bug. Please be patient and they'll get back to you on when it's fixed.");
+            MessageHelper.sendMessageToChannel(
+                    event.getMessageChannel(),
+                    "Admins have temporarily turned off game creation, "
+                            + "most likely to contain a bug. Please be patient and they'll get back to you on when it's fixed.");
             return;
         }
 
         if (CreateGameService.isLockedFromCreatingGames(event)) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                "You created a game within the last 10 minutes and thus are being stopped from creating more until some time " +
-                    "has passed. You can have someone else in the game press the button instead.");
+            MessageHelper.sendMessageToChannel(
+                    event.getMessageChannel(),
+                    "You created a game within the last 10 minutes and thus are being stopped from creating more until some time "
+                            + "has passed. You can have someone else in the game press the button instead.");
             return;
         }
 
@@ -61,26 +67,29 @@ public class CreateFoWGameService {
         String gameName = getNextFOWGameName();
         String lastGame = getLastFOWGameName();
         Game game;
-        if (!lastGame.equalsIgnoreCase("fow1")) {
+        if (!"fow1".equalsIgnoreCase(lastGame)) {
             if (!GameManager.isValid(lastGame)) {
-                BotLogger.warning(new BotLogger.LogMessageOrigin(event), "**Unable to create new games because the last game cannot be found. Was it deleted but the roles still exist?**");
+                BotLogger.warning(
+                        new LogOrigin(event),
+                        "**Unable to create new games because the last game cannot be found. Was it deleted but the roles still exist?**");
                 return;
             }
             game = GameManager.getManagedGame(lastGame).getGame();
             if (game != null && game.getCustomName().equalsIgnoreCase(gameSillyName)) {
-                MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                    "The custom name of the last game is the same as the one for this game, so the bot suspects a double press " +
-                        "occurred and is cancelling the creation of another game.");
+                MessageHelper.sendMessageToChannel(
+                        event.getMessageChannel(),
+                        "The custom name of the last game is the same as the one for this game, so the bot suspects a double press "
+                                + "occurred and is cancelling the creation of another game.");
                 return;
             }
         }
 
-        //Get GM
+        // Get GM
         String gmLine = StringUtils.substringBetween(buttonMsg, "GM: ", "\n");
         String gmId = StringUtils.substringBefore(gmLine, ".");
         Member gm = event.getGuild().getMemberById(gmId);
 
-        //Get Members
+        // Get Members
         List<Member> members = new ArrayList<>();
         String[] lines = buttonMsg.split("\n");
         boolean inPlayerSection = false;
@@ -110,7 +119,8 @@ public class CreateFoWGameService {
 
         Guild guild = findFoWGuildWithSpace(event.getGuild(), members.size() + 1);
         if (guild == null) {
-            MessageHelper.sendMessageToEventChannel(event, "All FoW Servers are full. Can not host a new game - please contact @Bothelper.");
+            MessageHelper.sendMessageToEventChannel(
+                    event, "All FoW Servers are full. Can not host a new game - please contact @Bothelper.");
             return;
         }
 
@@ -118,20 +128,28 @@ public class CreateFoWGameService {
         executeCreateFoWGame(guild, gameName, gameSillyName, gm, members, event.getChannel());
     }
 
-    public static void executeCreateFoWGame(Guild guild, String gameName, String gameFunName, Member gameOwner, List<Member> members, MessageChannel eventChannel) {
-        //CREATE ROLES
+    public static void executeCreateFoWGame(
+            Guild guild,
+            String gameName,
+            String gameFunName,
+            Member gameOwner,
+            List<Member> members,
+            MessageChannel eventChannel) {
+        // CREATE ROLES
         Role role = guild.createRole()
-            .setName(gameName)
-            .setMentionable(true)
-            .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+                .setName(gameName)
+                .setMentionable(true)
+                .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+        // game
 
         Role roleGM = guild.createRole()
-            .setName(gameName + " GM")
-            .setMentionable(true)
-            .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+                .setName(gameName + " GM")
+                .setMentionable(true)
+                .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+        // game
 
         guild.addRoleToMember(gameOwner, roleGM).queue();
-        //ADD PLAYERS TO ROLE
+        // ADD PLAYERS TO ROLE
         for (Member member : members) {
             guild.addRoleToMember(member, role).queue();
         }
@@ -143,7 +161,7 @@ public class CreateFoWGameService {
         newGame.setFowOption(FOWOption.MANAGED_COMMS, true);
         newGame.setFowOption(FOWOption.ALLOW_AGENDA_COMMS, true);
 
-        //ADD PLAYERS
+        // ADD PLAYERS
         newGame.addPlayer(gameOwner.getId(), gameOwner.getEffectiveName());
         for (Member member : members) {
             newGame.addPlayer(member.getId(), member.getEffectiveName());
@@ -151,14 +169,17 @@ public class CreateFoWGameService {
 
         // CREATE CATEGORY
         Role everyone = guild.getRolesByName("@everyone", true).getFirst();
-        long permission2 = Permission.MESSAGE_MANAGE.getRawValue() | Permission.VIEW_CHANNEL.getRawValue() | Permission.MANAGE_PERMISSIONS.getRawValue() | Permission.MANAGE_THREADS.getRawValue();
-        Category category = guild
-            .createCategory(gameName)
-            .addRolePermissionOverride(everyone.getIdLong(), 0, permission2)
-            .addRolePermissionOverride(roleGM.getIdLong(), permission2, 0)
-            .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+        long permission2 = Permission.MESSAGE_MANAGE.getRawValue()
+                | Permission.VIEW_CHANNEL.getRawValue()
+                | Permission.MANAGE_PERMISSIONS.getRawValue()
+                | Permission.MANAGE_THREADS.getRawValue();
+        Category category = guild.createCategory(gameName)
+                .addRolePermissionOverride(everyone.getIdLong(), 0, permission2)
+                .addRolePermissionOverride(roleGM.getIdLong(), permission2, 0)
+                .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+        // game
 
-        //CREATE CHANNELS
+        // CREATE CHANNELS
         String newGMChannelName = gameName + "-gm-room";
         String newActionsChannelName = gameName + "-anonymous-announcements-private";
         long gameRoleID = role.getIdLong();
@@ -167,15 +188,17 @@ public class CreateFoWGameService {
 
         // CREATE GM CHANNEL
         TextChannel gmChannel = guild.createTextChannel(newGMChannelName, category)
-            .syncPermissionOverrides()
-            .addRolePermissionOverride(gameRoleGMID, permission, 0)
-            .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+                .syncPermissionOverrides()
+                .addRolePermissionOverride(gameRoleGMID, permission, 0)
+                .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+        // game
 
         // CREATE Anon Announcements CHANNEL
         TextChannel actionsChannel = guild.createTextChannel(newActionsChannelName, category)
-            .syncPermissionOverrides()
-            .addRolePermissionOverride(gameRoleID, permission, 0)
-            .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+                .syncPermissionOverrides()
+                .addRolePermissionOverride(gameRoleID, permission, 0)
+                .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+        // game
         StringBuilder sb = new StringBuilder(role.getAsMention() + " - announcements channel\n");
         sb.append(getInfoTextFromFile("FoWMainChannelIntro.txt"));
         MessageHelper.sendMessageToChannel(actionsChannel, sb.toString());
@@ -185,8 +208,11 @@ public class CreateFoWGameService {
         sb.append(getInfoTextFromFile("FoWGMIntro.txt"));
         MessageHelper.sendMessageToChannel(gmChannel, sb.toString());
         HomebrewService.offerGameHomebrewButtons(gmChannel);
-        GMService.logActivity(newGame, "This thread will log player slash commands and other activities.\n"
-            + " If you don't care to follow this, just remove yourself from the thread.", true);
+        GMService.logActivity(
+                newGame,
+                "This thread will log player slash commands and other activities.\n"
+                        + " If you don't care to follow this, just remove yourself from the thread.",
+                true);
 
         // Individual player channels
         String privateChannelIntro = getInfoTextFromFile("FoWPrivateChannelIntro.txt");
@@ -196,9 +222,10 @@ public class CreateFoWGameService {
                 name = member.getEffectiveName();
             }
             TextChannel memberChannel = guild.createTextChannel(gameName + "-" + name + "-private", category)
-                .syncPermissionOverrides()
-                .addMemberPermissionOverride(member.getIdLong(), permission, 0)
-                .complete();// Must `complete` if we're using this channel as part of an interaction that saves the game
+                    .syncPermissionOverrides()
+                    .addMemberPermissionOverride(member.getIdLong(), permission, 0)
+                    .complete(); // Must `complete` if we're using this channel as part of an interaction that saves the
+            // game
             Player player_ = newGame.getPlayer(member.getId());
             player_.setPrivateChannelID(memberChannel.getId());
             sb = new StringBuilder(member.getAsMention() + " - private channel\n");
@@ -206,19 +233,20 @@ public class CreateFoWGameService {
             MessageHelper.sendMessageToChannel(memberChannel, sb.toString());
         }
 
-        String message = "Channels have been set up:\n" +
-            "> " + gameName + " " + gameFunName + "\n" +
-            "> " + gmChannel.getAsMention() + "\n" +
-            "> " + actionsChannel.getAsMention() + "\n";
+        String message = "Channels have been set up:\n" + "> "
+                + gameName + " " + gameFunName + "\n" + "> "
+                + gmChannel.getAsMention() + "\n" + "> "
+                + actionsChannel.getAsMention() + "\n";
         MessageHelper.sendMessageToChannel(eventChannel, message);
 
         GameManager.save(newGame, "Create FOW Game Channels");
 
-        if (eventChannel instanceof ThreadChannel thread && thread.getParentChannel().getName().equals("making-fow-games")) {
+        if (eventChannel instanceof ThreadChannel thread
+                && "making-fow-games".equals(thread.getParentChannel().getName())) {
             newGame.setLaunchPostThreadID(thread.getId());
             ThreadChannelManager manager = thread.getManager()
-                .setName(StringUtils.left(newGame.getName().toUpperCase() + "-LAUNCHED - " + thread.getName(), 100))
-                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_24_HOURS);
+                    .setName(StringUtils.left(newGame.getName().toUpperCase() + "-LAUNCHED - " + thread.getName(), 100))
+                    .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_24_HOURS);
             manager.queue();
         }
     }
@@ -226,25 +254,24 @@ public class CreateFoWGameService {
     private static String getInfoTextFromFile(String file) {
         String path = ResourceHelper.getInstance().getHelpFile(file);
         try {
-            return new String(Files.readAllBytes(Paths.get(path)));
+            return Files.readString(Paths.get(path));
         } catch (Exception e) {
             return file + " IS BLANK";
         }
     }
 
-    public static String getLastFOWGameName() {
+    private static String getLastFOWGameName() {
         return "fow" + getLastFOWGameNumber();
     }
 
     public static String getNextFOWGameName() {
         int nextFowNum = getLastFOWGameNumber() + 1;
-        while (ReserveGameNumberService.isGameNumReserved("fow" + nextFowNum))
-            nextFowNum++;
+        while (ReserveGameNumberService.isGameNumReserved("fow" + nextFowNum)) nextFowNum++;
         return "fow" + (getLastFOWGameNumber() + 1);
     }
 
     private static int getLastFOWGameNumber() {
-        ArrayList<Integer> existingNums = getAllExistingFOWNumbers();
+        List<Integer> existingNums = getAllExistingFOWNumbers();
         if (existingNums.isEmpty()) {
             return 1;
         }
@@ -259,10 +286,10 @@ public class CreateFoWGameService {
         for (Guild guild : guilds) {
             System.out.println(guild.getName());
             List<Role> fowRoles = guild.getRoles().stream()
-                .filter(r -> r.getName().startsWith("fow"))
-                .toList();
+                    .filter(r -> r.getName().startsWith("fow"))
+                    .toList();
 
-            //EXISTING ROLE NAMES
+            // EXISTING ROLE NAMES
             for (Role role : fowRoles) {
                 String fowNum = role.getName().replace("fow", "");
                 if (Helper.isInteger(fowNum)) {
@@ -273,8 +300,8 @@ public class CreateFoWGameService {
 
         // GET ALL EXISTING FOW MAP NAMES
         List<String> gameNames = GameManager.getGameNames().stream()
-            .filter(gameName -> gameName.startsWith("fow"))
-            .toList();
+                .filter(gameName -> gameName.startsWith("fow"))
+                .toList();
         for (String gameName : gameNames) {
             String fowNum = gameName.replace("fow", "");
             if (Helper.isInteger(fowNum)) {
@@ -305,14 +332,14 @@ public class CreateFoWGameService {
     }
 
     public static boolean serverCanHostNewGame(Guild guild, int playerCount) {
-        return guild != null && serverHasRoomForNewRole(guild)
-            && serverHasRoomForNewChannels(guild, playerCount);
+        return guild != null && serverHasRoomForNewRole(guild) && serverHasRoomForNewChannels(guild, playerCount);
     }
 
     private static boolean serverHasRoomForNewRole(Guild guild) {
         int roleCount = guild.getRoles().size();
-        if (roleCount >= 250) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateFoWGameService.serverHasRoomForNewRole` Cannot create a new role. Server **" + guild.getName() + "** currently has **" + roleCount + "** roles.");
+        if (roleCount >= MAX_ROLE_COUNT) {
+            BotLogger.warning("`CreateFoWGameService.serverHasRoomForNewRole` Cannot create a new role. Server **"
+                    + guild.getName() + "** currently has **" + roleCount + "** roles.");
             return false;
         }
         return true;
@@ -320,10 +347,10 @@ public class CreateFoWGameService {
 
     private static boolean serverHasRoomForNewChannels(Guild guild, int playerCount) {
         int channelCount = guild.getChannels().size();
-        int channelMax = 495; //to keep 5 channels free always
         int channelsCountRequiredForNewGame = playerCount + 2;
-        if (channelCount > (channelMax - channelsCountRequiredForNewGame)) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateFoWGameService.serverHasRoomForNewChannels` Cannot create new channels. Server **" + guild.getName() + "** currently has " + channelCount + " channels.");
+        if (channelCount > (MAX_CHANNELS_MINUS_5 - channelsCountRequiredForNewGame)) {
+            BotLogger.warning("`CreateFoWGameService.serverHasRoomForNewChannels` Cannot create new channels. Server **"
+                    + guild.getName() + "** currently has " + channelCount + " channels.");
             return false;
         }
         return true;
