@@ -10,10 +10,6 @@ import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.jetbrains.annotations.Nullable;
-
 import lombok.experimental.UtilityClass;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Guild;
@@ -27,12 +23,16 @@ import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
+import net.dv8tion.jda.api.managers.channel.concrete.TextChannelManager;
 import net.dv8tion.jda.api.managers.channel.concrete.ThreadChannelManager;
 import net.dv8tion.jda.api.requests.restaction.ChannelAction;
 import net.dv8tion.jda.api.utils.FileUpload;
+import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.Nullable;
 import ti4.AsyncTI4DiscordBot;
 import ti4.ResourceHelper;
 import ti4.buttons.Buttons;
+import ti4.commands.CommandHelper;
 import ti4.helpers.ButtonHelper;
 import ti4.helpers.Constants;
 import ti4.helpers.Helper;
@@ -41,9 +41,10 @@ import ti4.helpers.ThreadArchiveHelper;
 import ti4.image.ImageHelper;
 import ti4.map.Game;
 import ti4.map.Player;
-import ti4.map.manage.GameManager;
-import ti4.message.BotLogger;
+import ti4.map.persistence.GameManager;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
+import ti4.message.logging.LogOrigin;
 import ti4.service.async.ReserveGameNumberService;
 import ti4.service.image.FileUploadService;
 import ti4.service.option.GameOptionService;
@@ -53,6 +54,9 @@ import ti4.settings.users.UserSettingsManager;
 @UtilityClass
 public class CreateGameService {
 
+    private static final int MAX_ROLE_COUNT = 250;
+    private static final int MAX_CHANNEL_COUNT = 500;
+
     public static Game createNewGame(String gameName, Member gameOwner) {
         Game newGame = new Game();
         newGame.newGameSetup();
@@ -61,36 +65,44 @@ public class CreateGameService {
         newGame.setOwnerName(gameOwner.getEffectiveName());
         newGame.setName(gameName);
         newGame.setAutoPing(true);
-        newGame.setAutoPingSpacer(24);
+        newGame.setAutoPingSpacer(12);
         newGame.addPlayer(gameOwner.getId(), gameOwner.getEffectiveName());
         GameManager.save(newGame, "Game created");
         return newGame;
     }
 
-    public static void reportNewGameCreated(Game game) {
-        if (game == null)
-            return;
+    private static void reportNewGameCreated(Game game) {
+        if (game == null) return;
 
-        TextChannel bothelperLoungeChannel = AsyncTI4DiscordBot.guildPrimary.getTextChannelsByName("staff-lounge", true)
-            .stream().findFirst().orElse(null);
-        if (bothelperLoungeChannel == null)
-            return;
+        TextChannel bothelperLoungeChannel =
+                AsyncTI4DiscordBot.guildPrimary.getTextChannelsByName("staff-lounge", true).stream()
+                        .findFirst()
+                        .orElse(null);
+        if (bothelperLoungeChannel == null) return;
         List<ThreadChannel> threadChannels = bothelperLoungeChannel.getThreadChannels();
-        if (threadChannels.isEmpty())
-            return;
+        if (threadChannels.isEmpty()) return;
         String threadName = "game-starts-and-ends";
         // SEARCH FOR EXISTING OPEN THREAD
         for (ThreadChannel threadChannel_ : threadChannels) {
             if (threadChannel_.getName().equals(threadName)) {
-                String guildName = game.getGuild() == null ? "Server Unknown" : game.getGuild().getName();
-                MessageHelper.sendMessageToChannel(threadChannel_,
-                    "Game: **" + game.getName() + "** on server **" + guildName + "** has been created.");
+                String guildName = game.getGuild() == null
+                        ? "Server Unknown"
+                        : game.getGuild().getName();
+                MessageHelper.sendMessageToChannel(
+                        threadChannel_,
+                        "Game: **" + game.getName() + "** on server **" + guildName + "** has been created.");
                 break;
             }
         }
     }
 
-    public static Game createGameChannels(List<Member> members, GenericInteractionCreateEvent event, String gameFunName, String gameName, Member gameOwner, Category categoryChannel) {
+    public static Game createGameChannels(
+            List<Member> members,
+            GenericInteractionCreateEvent event,
+            String gameFunName,
+            String gameName,
+            Member gameOwner,
+            Category categoryChannel) {
         // SET GUILD BASED ON CATEGORY SELECTED
         Guild guild = categoryChannel.getGuild();
 
@@ -99,15 +111,18 @@ public class CreateGameService {
 
         // CHECK IF SERVER CAN SUPPORT A NEW GAME
         if (!serverCanHostNewGame(guild)) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                "Server **" + guild.getName() + "** can not host a new game - please contact @Admin to resolve.");
+            MessageHelper.sendMessageToChannel(
+                    event.getMessageChannel(),
+                    "Server **" + guild.getName() + "** can not host a new game - please contact @Admin to resolve.");
             return null;
         }
 
         // CHECK IF CATEGORY HAS ROOM
         if (categoryChannel.getChannels().size() > 48) {
-            MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Category: **" + categoryChannel.getName()
-                + "** is full on server **" + guild.getName() + "**. Create a new category then try again.");
+            MessageHelper.sendMessageToChannel(
+                    event.getMessageChannel(),
+                    "Category: **" + categoryChannel.getName() + "** is full on server **" + guild.getName()
+                            + "**. Create a new category then try again.");
             return null;
         }
 
@@ -115,15 +130,11 @@ public class CreateGameService {
         List<Member> missingMembers = inviteUsersToServer(guild, members, event.getMessageChannel());
 
         // CREATE ROLE
-        Role role = guild.createRole()
-            .setName(gameName)
-            .setMentionable(true)
-            .complete();
+        Role role = guild.createRole().setName(gameName).setMentionable(true).complete();
 
         // ADD PLAYERS TO ROLE
         for (Member member : members) {
-            if (missingMembers.contains(member))
-                continue; // skip members who aren't on the new server yet
+            if (missingMembers.contains(member)) continue; // skip members who aren't on the new server yet
             guild.addRoleToMember(member, role).complete();
         }
 
@@ -147,62 +158,62 @@ public class CreateGameService {
         String newBotThreadName = gameName + Constants.BOT_CHANNEL_SUFFIX;
         long gameRoleID = role.getIdLong();
         long permission = Permission.MESSAGE_MANAGE.getRawValue() | Permission.VIEW_CHANNEL.getRawValue();
+
+        // CREATE TABLETALK CHANNEL
+        TextChannel chatChannel = guild.createTextChannel(newChatChannelName, categoryChannel)
+                .syncPermissionOverrides()
+                .addRolePermissionOverride(gameRoleID, permission, 0)
+                .complete();
+        newGame.setTableTalkChannelID(chatChannel.getId());
+
+        // CREATE ACTIONS CHANNEL
+        TextChannel actionsChannel = guild.createTextChannel(newActionsChannelName, categoryChannel)
+                .syncPermissionOverrides()
+                .addRolePermissionOverride(gameRoleID, permission, 0)
+                .complete();
+        newGame.setMainChannelID(actionsChannel.getId());
+
         Role bothelperRole = getRole("Bothelper", guild);
-        long threadPermission = Permission.MANAGE_THREADS.getRawValue();
         List<Member> nonGameBothelpers = new ArrayList<>();
         if (bothelperRole != null) {
             for (Member botHelper : guild.getMembersWithRoles(bothelperRole)) {
-                boolean inGame = false;
-                for (Member member : members) {
-                    if (member.getId().equalsIgnoreCase(botHelper.getId())) {
-                        inGame = true;
-                    }
-                }
+                boolean inGame =
+                        members.stream().anyMatch(member -> member.getId().equals(botHelper.getId()));
                 if (!inGame) {
                     nonGameBothelpers.add(botHelper);
                 }
             }
         }
-        // CREATE TABLETALK CHANNEL
-        TextChannel chatChannel = guild.createTextChannel(newChatChannelName, categoryChannel)
-            .syncPermissionOverrides()
-            .addRolePermissionOverride(gameRoleID, permission, 0)
-            .complete();
-        newGame.setTableTalkChannelID(chatChannel.getId());
-
-        // CREATE ACTIONS CHANNEL
-        TextChannel actionsChannel = guild.createTextChannel(newActionsChannelName, categoryChannel)
-            .syncPermissionOverrides()
-            .addRolePermissionOverride(gameRoleID, permission, 0)
-            .complete();
-        newGame.setMainChannelID(actionsChannel.getId());
+        long threadPermission = Permission.MANAGE_THREADS.getRawValue();
+        TextChannelManager chatChannelManager = chatChannel.getManager();
+        TextChannelManager actionsChannelManager = actionsChannel.getManager();
         for (Member botHelper : nonGameBothelpers) {
-            chatChannel.getManager()
-                .putMemberPermissionOverride(botHelper.getIdLong(), threadPermission, 0)
-                .queue();
-
-            actionsChannel.getManager()
-                .putMemberPermissionOverride(botHelper.getIdLong(), threadPermission, 0)
-                .queue();
+            chatChannelManager =
+                    chatChannelManager.putMemberPermissionOverride(botHelper.getIdLong(), threadPermission, 0);
+            actionsChannelManager =
+                    actionsChannelManager.putMemberPermissionOverride(botHelper.getIdLong(), threadPermission, 0);
         }
+        chatChannelManager.queue();
+        actionsChannelManager.queue();
+
         // CREATE BOT/MAP THREAD
-        ThreadChannel botThread = actionsChannel.createThreadChannel(newBotThreadName)
-            .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_1_WEEK)
-            .complete();
+        ThreadChannel botThread = actionsChannel
+                .createThreadChannel(newBotThreadName)
+                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_1_WEEK)
+                .complete();
         newGame.setBotMapUpdatesThreadID(botThread.getId());
         introductionToBotMapUpdatesThread(newGame);
         introductionForNewPlayers(newGame);
 
         // Create Cards Info Threads
         // for (Player player : newGame.getPlayers().values()) {
-        //     player.createCardsInfoThreadChannelsIfRequired();
+        // player.createCardsInfoThreadChannelsIfRequired();
         // }
 
         // Report Channel Creation back to Launch channel
-        String message = "Role and Channels have been set up:\n> " +
-            role.getName() + "\n> " +
-            chatChannel.getAsMention() + "\n> " +
-            actionsChannel.getAsMention();
+        String message = "Role and Channels have been set up:\n> " + role.getName()
+                + "\n> " + chatChannel.getAsMention()
+                + "\n> " + actionsChannel.getAsMention();
         MessageHelper.sendMessageToEventChannel(event, message);
 
         reportNewGameCreated(newGame);
@@ -210,12 +221,14 @@ public class CreateGameService {
         presentSetupToPlayers(newGame);
 
         // AUTOCLOSE LAUNCH THREAD AFTER RUNNING COMMAND
-        if (event.getChannel() instanceof ThreadChannel thread && thread.getParentChannel().getName().equals("making-new-games")) {
+        if (event.getChannel() instanceof ThreadChannel thread
+                && "making-new-games".equals(thread.getParentChannel().getName())) {
             newGame.setLaunchPostThreadID(thread.getId());
             ThreadChannelManager manager = thread.getManager()
-                .setName(StringUtils.left(newGame.getName() + "-launched [FULL] - " + thread.getName(), 100))
-                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_24_HOURS);
-            if (thread.getName().toLowerCase().contains("tigl") || newGame.getCustomName().toLowerCase().contains("tigl")) {
+                    .setName(StringUtils.left(newGame.getName() + "-launched [FULL] - " + thread.getName(), 100))
+                    .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_24_HOURS);
+            if (thread.getName().toLowerCase().contains("tigl")
+                    || newGame.getCustomName().toLowerCase().contains("tigl")) {
                 TIGLHelper.initializeTIGLGame(newGame);
             }
             if (missingMembers.isEmpty()) {
@@ -227,24 +240,30 @@ public class CreateGameService {
         return newGame;
     }
 
-    private static void presentSetupToPlayers(Game game) {
+    public static void presentSetupToPlayers(Game game) {
         introductionToTableTalkChannel(game);
         introductionToActionsChannel(game);
-        sendMessageAboutAggressionMetas(game);
+        // sendMessageAboutAggressionMetas(game);
 
         MessageChannel actionsChannel = game.getActionsChannel();
 
         Button miltyButton = Buttons.green("miltySetup", "Start Milty Setup");
         Button addMapString = Buttons.green("addMapString~MDL", "Add Prebuilt Map String");
-        MessageHelper.sendMessageToChannelWithButtons(actionsChannel, "How would you like to set up the players and map?", List.of(miltyButton, addMapString));
+        MessageHelper.sendMessageToChannelWithButtons(
+                actionsChannel,
+                "How would you like to set up the players and map?",
+                List.of(miltyButton, addMapString));
 
-        //Button offerOptions = Buttons.green("offerGameOptionButtons", "Options");
+        // Button offerOptions = Buttons.green("offerGameOptionButtons", "Options");
         GameOptionService.offerGameOptionButtons(game, actionsChannel);
-        //MessageHelper.sendMessageToChannelWithButton(actionsChannel, "Want to change some options? ", offerOptions);
+        // MessageHelper.sendMessageToChannelWithButton(actionsChannel, "Want to change
+        // some options? ", offerOptions);
 
         HomebrewService.offerGameHomebrewButtons(actionsChannel);
         ButtonHelper.offerPlayerSetupButtons(actionsChannel, game);
-        MessageHelper.sendMessageToChannel(actionsChannel, "Reminder that all games played on this server must abide by the [AsyncTI4 Code of Conduct](https://discord.com/channels/943410040369479690/1082164664844169256/1270758780367274006)");
+        MessageHelper.sendMessageToChannel(
+                actionsChannel,
+                "Reminder that all games played on this server must abide by the [AsyncTI4 Code of Conduct](https://discord.com/channels/943410040369479690/1082164664844169256/1270758780367274006)");
     }
 
     private static void introductionToBotMapUpdatesThread(Game game) {
@@ -252,24 +271,26 @@ public class CreateGameService {
         if (botThread == null) {
             return;
         }
-        String botGetStartedMessage = game.getPing() + " - bot/map channel\n" +
-            "This channel is for bot slash commands and updating the map, to help keep the actions channel clean.\n" +
-            "### __Use the following commands to get started:__\n" +
-            "> `/map add_tile_list` and insert your TTPG map string\n" +
-            "> `/player setup` to set player faction and color\n" +
-            "> `/game setup` to set player count and additional options\n" +
-            "> `/game set_order` to set the starting speaker order if you're using a weird map\n" +
-            "> `/milty setup` to bring up a menu for handling a specific milty draft\n" +
-            "> `/milty quickstart` to quickly launch a milty draft that doesnt deviate too much\n\n" +
-            "### __Other helpful commands:__\n" +
-            "> `/game replace` to replace a player in the game with a new one\n";
+        String botGetStartedMessage = game.getPing() + " - bot/map channel\n"
+                + "This channel is for bot slash commands and updating the map, to help keep the actions channel clean.\n"
+                + "### __Use the following commands to get started:__\n"
+                + "> `/map add_tile_list` and insert your TTPG map string\n"
+                + "> `/player setup` to set player faction and color\n"
+                + "> `/game setup` to set player count and additional options\n"
+                + "> `/game set_order` to set the starting speaker order if you're using a weird map\n"
+                + "> `/milty setup` to bring up a menu for handling a specific milty draft\n"
+                + "> `/milty quickstart` to quickly launch a milty draft that doesnt deviate too much\n\n"
+                + "### __Other helpful commands:__\n"
+                + "> `/game replace` to replace a player in the game with a new one\n";
         MessageHelper.sendMessageToChannelAndPin(botThread, botGetStartedMessage);
-        MessageHelper.sendMessageToChannelAndPin(botThread, "Website Live Map: https://www.AsyncTI4.com/game/" + game.getName());
+        MessageHelper.sendMessageToChannelAndPin(
+                botThread, "Website Live Map: https://www.AsyncTI4.com/game/" + game.getName());
     }
 
     private static void sendMessageAboutAggressionMetas(Game game) {
-        String aggressionMsg = """
-            Strangers playing with eachother for the first time can have different aggression metas, and be unpleasantly surprised when they find themselves playing with others who don't share that meta.\
+        String aggressionMsg =
+                """
+            Strangers playing with each other for the first time can have different aggression metas, and be unpleasantly surprised when they find themselves playing with others who don't share that meta.\
              Therefore, you can use the buttons below to anonymously share your aggression meta, and if a conflict seems apparent, you can have a conversation about it, or leave the game if the difference is too much and the conversation went badly. These have no binding effect on the game, they just are for setting expectations and starting necessary conversations at the start, rather than in a tense moment 3 weeks down the line\
             .\s
             The conflict metas are loosely classified as the following:\s
@@ -286,22 +307,34 @@ public class CreateGameService {
     }
 
     private static void introductionToActionsChannel(Game game) {
-        String actionsGetStartedMessage = game.getPing() + " - actions channel\n" +
-            "This channel is for taking actions in the game, primarily using buttons or the odd slash command.\n" +
-            "Generally, you don't want to chat in here once the game starts, as ideally this channel is a clean ledger of what has happened in the game for others to quickly read.\n";
+        String actionsGetStartedMessage = game.getPing() + " - actions channel\n"
+                + "This channel is for taking actions in the game, primarily using buttons or the odd slash command.\n"
+                + "Generally, you don't want to chat in here once the game starts, as ideally this channel is a clean ledger of what has happened in the game for others to quickly read.\n";
         MessageHelper.sendMessageToChannelAndPin(game.getActionsChannel(), actionsGetStartedMessage);
     }
 
     private static void introductionToTableTalkChannel(Game game) {
         TextChannel chatChannel = game.getTableTalkChannel();
-        String tabletalkGetStartedMessage = game.getPing() + " - table talk channel\n" +
-            "This channel is for typical over the table conversation, as you would over the table while playing the game in real life.\n" +
-            "If this group has agreed to whispers (secret conversations), you can create private threads off this channel, or utilize the bots in built whispers (explained in more detail in your cards info once you're set up).\n" +
-            "Typical things that go here are: general conversation, deal proposals, memes - everything that isn't either an actual action in the game or a bot command\n" +
-            game.getPing() + " if you are playing with strangers, you should take a few moments at the start here to discuss how you're going handle disputes and take-backs. Async is an odd format, it can get messy " +
-            "and takebacks are often not only advisable but necessary. A common standard is no new relevant information, but if you wish to get more specific or do something else (like you can only takeback if the whole table says so) then state that here. \n" +
-            "Regarding disputes, playing a diplomatic game with strangers online, with no tone to go off of or human face to empathize with, can often lead to harsh words and hurt feelings. No matter what happens mechanically in the game, you should always " +
-            "strive to treat the other people with respect, patience, and hopefully kindness. If you cannot, you should step away, and if you ever feel the need to leave a game permanently, we do have a replacement system that gets a fair amount of use (ping a bothelper for specifics)";
+        String tabletalkGetStartedMessage = game.getPing() + " - table talk channel\n"
+                + "This channel is for typical over the table conversation, as you would over the table while playing the game in real life.\n"
+                + "If this group has agreed to whispers (secret conversations), you can create private threads off this channel, or utilize the bots in built whispers (explained in more detail in your cards info once you're set up).\n"
+                + "Typical things that go here are: general conversation, deal proposals, memes - everything that isn't either an actual action in the game or a bot command\n";
+        // +
+        // game.getPing()
+        // + " if you are playing with strangers, you should take a few moments at the start here to discuss how you're
+        // going handle disputes and take-backs. Async is an odd format, it can get messy "
+        // +
+        // "and takebacks are often not only advisable but necessary. A common standard is no new relevant information,
+        // but if you wish to get more specific or do something else (like you can only takeback if the whole table says
+        // so) then state that here. \n"
+        // +
+        // "Regarding disputes, playing a diplomatic game with strangers online, with no tone to go off of or human face
+        // to empathize with, can often lead to harsh words and hurt feelings. No matter what happens mechanically in
+        // the game, you should always "
+        // +
+        // "strive to treat the other people with respect, patience, and hopefully kindness. If you cannot, you should
+        // step away, and if you ever feel the need to leave a game permanently, we do have a replacement system that
+        // gets a fair amount of use (ping a bothelper for specifics)";
         MessageHelper.sendMessageToChannelAndPin(chatChannel, tabletalkGetStartedMessage);
     }
 
@@ -320,37 +353,44 @@ public class CreateGameService {
             return;
         }
 
-        chatChannel.createThreadChannel("Info for Players new to AsyncTI4")
-            .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_1_WEEK)
-            .queue(introThread -> {
-                try {
-                    StringBuilder msg = new StringBuilder();
-                    for (Player p : newPlayers) {
-                        msg.append(p.getRepresentation());
-                    }
-                    msg.append(getNewPlayerInfoText());
-                    String message = msg.toString();
-                    if (botThread != null) {
-                        message = message.replace("the bot-map-updates thread", botThread.getJumpUrl());
-                    }
-                    MessageHelper.sendMessageToChannel(introThread, message);
-                    BufferedImage colorsImage = ImageHelper.readScaled(ResourceHelper.getInstance().getExtraFile("Compiled_Async_colors.png"), 731, 593);
-                    FileUpload fileUpload = FileUploadService.createFileUpload(colorsImage, "colors");
-                    MessageHelper.sendFileUploadToChannel(introThread, fileUpload);
-                } catch (Exception e) {
-                    BotLogger.error(new BotLogger.LogMessageOrigin(game), "newPlayerIntro", e);
-                }
-            }, null);
+        chatChannel
+                .createThreadChannel("Info for Players new to AsyncTI4")
+                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_1_WEEK)
+                .queue(
+                        introThread -> {
+                            try {
+                                StringBuilder msg = new StringBuilder();
+                                for (Player p : newPlayers) {
+                                    msg.append(p.getRepresentation());
+                                }
+                                msg.append(getNewPlayerInfoText());
+                                String message = msg.toString();
+                                if (botThread != null) {
+                                    message = message.replace("the bot-map-updates thread", botThread.getJumpUrl());
+                                }
+                                MessageHelper.sendMessageToChannel(introThread, message);
+                                BufferedImage colorsImage = ImageHelper.readScaled(
+                                        ResourceHelper.getInstance().getExtraFile("Compiled_Async_colors.png"),
+                                        731,
+                                        593);
+                                FileUpload fileUpload = FileUploadService.createFileUpload(colorsImage, "colors");
+                                MessageHelper.sendFileUploadToChannel(introThread, fileUpload);
+                            } catch (Exception e) {
+                                BotLogger.error(new LogOrigin(game), "newPlayerIntro", e);
+                            }
+                        },
+                        null);
     }
 
     /**
-     * @param guild guild to invite users to
+     * @param guild   guild to invite users to
      * @param members list of users
      * @param channel channel to post message to
      * @return the list of missing members
      */
     public static List<Member> inviteUsersToServer(Guild guild, List<Member> members, MessageChannel channel) {
-        List<String> guildMemberIDs = guild.getMembers().stream().map(ISnowflake::getId).toList();
+        List<String> guildMemberIDs =
+                guild.getMembers().stream().map(ISnowflake::getId).toList();
         List<Member> missingMembers = new ArrayList<>();
         for (Member member : members) {
             if (!guildMemberIDs.contains(member.getId())) {
@@ -360,16 +400,18 @@ public class CreateGameService {
         if (!missingMembers.isEmpty()) {
             StringBuilder sb = new StringBuilder();
             sb.append(
-                "### Sorry for the inconvenience!\nDue to Discord's limits on Role/Channel/Thread count, we need to create this game on another server.\nPlease use the invite below to join our **");
+                    "### Sorry for the inconvenience!\nDue to Discord's limits on Role/Channel/Thread count, we need to create this game on another server.\nPlease use the invite below to join our **");
             sb.append(guild.getName()).append("** server.\n");
-            sb.append(Helper.getGuildInviteURL(guild, missingMembers.size() + 10)).append("\n");
+            sb.append(Helper.getGuildInviteURL(guild, missingMembers.size() + 10))
+                    .append("\n");
             sb.append("The following players need to join the server:\n");
             for (Member member : missingMembers) {
                 sb.append("> ").append(member.getAsMention()).append("\n");
             }
-            sb.append("You will be automatically added to the game channels when you join the server."
-                + "\nNote that if for some reason you are not automatically added to the game after joining the server,"
-                + " you can fix this by having one of the other game members run `/game ping` in the actions channel.");
+            sb.append(
+                    "You will be automatically added to the game channels when you join the server."
+                            + "\nNote that if for some reason you are not automatically added to the game after joining the server,"
+                            + " you can fix this by having one of the other game members run `/game ping` in the actions channel.");
             MessageHelper.sendMessageToChannel(channel, sb.toString());
         }
         return missingMembers;
@@ -381,8 +423,7 @@ public class CreateGameService {
             return "pbd1";
         }
         int nextPBDNumber = Collections.max(getAllExistingPBDNumbers()) + 1;
-        while (ReserveGameNumberService.isGameNumReserved("pbd" + nextPBDNumber))
-            nextPBDNumber++;
+        while (ReserveGameNumberService.isGameNumReserved("pbd" + nextPBDNumber)) nextPBDNumber++;
         return "pbd" + nextPBDNumber;
     }
 
@@ -421,8 +462,8 @@ public class CreateGameService {
         // GET ALL PBD ROLES FROM ALL GUILDS
         for (Guild guild : guilds) {
             List<Role> pbdRoles = guild.getRoles().stream()
-                .filter(r -> r.getName().startsWith("pbd"))
-                .toList();
+                    .filter(r -> r.getName().startsWith("pbd"))
+                    .toList();
 
             // EXISTING ROLE NAMES
             for (Role role : pbdRoles) {
@@ -435,8 +476,8 @@ public class CreateGameService {
 
         // GET ALL EXISTING PBD MAP NAMES
         List<String> gameNames = GameManager.getGameNames().stream()
-            .filter(gameName -> gameName.startsWith("pbd"))
-            .toList();
+                .filter(gameName -> gameName.startsWith("pbd"))
+                .toList();
         for (String gameName : gameNames) {
             String pbdNum = gameName.replace("pbd", "");
             if (Helper.isInteger(pbdNum)) {
@@ -450,75 +491,78 @@ public class CreateGameService {
     @Nullable
     private static Guild getServerWithMostCapacity() {
         List<Guild> guilds = AsyncTI4DiscordBot.serversToCreateNewGamesOn.stream()
-            .filter(CreateGameService::serverHasRoomForNewFullCategory)
-            .sorted(Comparator.comparing(CreateGameService::getServerCapacityForNewGames))
-            .toList();
+                .filter(CreateGameService::serverHasRoomForNewFullCategory)
+                .sorted(Comparator.comparing(CreateGameService::getServerCapacityForNewGames))
+                .toList();
 
         if (guilds.isEmpty() && serverHasRoomForNewFullCategory(AsyncTI4DiscordBot.guildPrimary)) {
             return AsyncTI4DiscordBot.guildPrimary;
         }
 
         if (guilds.isEmpty()) {
-            BotLogger.warning("`CreateGameService.getServerWithMostCapacity` No available servers to create a new game category");
+            BotLogger.warning(
+                    "`CreateGameService.getServerWithMostCapacity` No available servers to create a new game category");
             return null;
         }
 
         String debugText = guilds.stream()
-            .map(g -> g.getName() + ": " + getServerCapacityForNewGames(g))
-            .collect(Collectors.joining("\n"));
+                .map(g -> g.getName() + ": " + getServerCapacityForNewGames(g))
+                .collect(Collectors.joining("\n"));
         BotLogger.info("Server Game Capacity Check:\n" + debugText);
         return guilds.getLast();
     }
 
     public static boolean serverCanHostNewGame(Guild guild) {
-        return guild != null && serverHasRoomForNewRole(guild)
-            && serverHasRoomForNewChannels(guild);
+        return guild != null && serverHasRoomForNewRole(guild) && serverHasRoomForNewChannels(guild);
     }
 
     private static boolean serverHasRoomForNewRole(Guild guild) {
         int roleCount = guild.getRoles().size();
-        if (roleCount >= 250) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateGameService.serverHasRoomForNewRole` Cannot create a new role. Server **"
-                + guild.getName() + "** currently has **" + roleCount + "** roles.");
+        if (roleCount >= MAX_ROLE_COUNT) {
+            BotLogger.warning("`CreateGameService.serverHasRoomForNewRole` Cannot create a new role. Server **"
+                    + guild.getName() + "** currently has **" + roleCount + "** roles.");
             return false;
         }
         return true;
     }
 
     private static int getServerCapacityForNewGames(Guild guild) {
-        int maxRoleCount = 250;
         int roleCount = guild.getRoles().size();
-        int gameCountByRole = maxRoleCount - roleCount;
+        int gameCountByRole = MAX_ROLE_COUNT - roleCount;
 
-        int maxChannelCount = 500;
         int channelCount = guild.getChannels().size();
-        int gameCountByChannel = (maxChannelCount - channelCount) / 2;
+        int gameCountByChannel = (MAX_CHANNEL_COUNT - channelCount) / 2;
 
         return Math.min(gameCountByRole, gameCountByChannel);
     }
 
     private static boolean serverHasRoomForNewFullCategory(Guild guild) {
-        if (guild == null)
-            return false;
+        if (guild == null) return false;
 
-        int maxGamesPerCategory = Math.max(1, Math.min(25, GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.MAX_GAMES_PER_CATEGORY.toString(), Integer.class, 10)));
+        int settingForMaxGamesPerCategory = GlobalSettings.getSetting(
+                GlobalSettings.ImplementedSettings.MAX_GAMES_PER_CATEGORY.toString(), Integer.class, 10);
+        int maxGamesPerCategory = Math.max(1, Math.min(25, settingForMaxGamesPerCategory));
 
         // SPACE FOR 25 ROLES
         int roleCount = guild.getRoles().size();
-        if (roleCount > (250 - maxGamesPerCategory)) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateGameService.serverHasRoomForNewFullCategory` Cannot create a new category. Server **"
-                + guild.getName() + "** currently has **" + roleCount + "** roles and a new category requires space for " + maxGamesPerCategory + " roles.");
+        if (roleCount > (MAX_ROLE_COUNT - maxGamesPerCategory)) {
+            BotLogger.warning(
+                    "`CreateGameService.serverHasRoomForNewFullCategory` Cannot create a new category. Server **"
+                            + guild.getName() + "** currently has **" + roleCount
+                            + "** roles and a new category requires space for " + maxGamesPerCategory + " roles.");
             return false;
         }
 
         // SPACE FOR 50 CHANNELS
         int channelCount = guild.getChannels().size();
-        int channelMax = 500;
         int channelsCountRequiredForNewCategory = 1 + 2 * maxGamesPerCategory;
-        if (channelCount > (channelMax - channelsCountRequiredForNewCategory)) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateGameService.serverHasRoomForNewFullCategory` Cannot create a new category. Server **"
-                + guild.getName() + "** currently has " + channelCount + " channels and a new category requires space for "
-                + channelsCountRequiredForNewCategory + " new channels (including 1 for the category itself)");
+        if (channelCount > (MAX_CHANNEL_COUNT - channelsCountRequiredForNewCategory)) {
+            BotLogger.warning(
+                    "`CreateGameService.serverHasRoomForNewFullCategory` Cannot create a new category. Server **"
+                            + guild.getName() + "** currently has " + channelCount
+                            + " channels and a new category requires space for "
+                            + channelsCountRequiredForNewCategory
+                            + " new channels (including 1 for the category itself)");
             return false;
         }
 
@@ -527,11 +571,10 @@ public class CreateGameService {
 
     private static boolean serverHasRoomForNewChannels(Guild guild) {
         int channelCount = guild.getChannels().size();
-        int channelMax = 500;
         int channelsCountRequiredForNewGame = 2;
-        if (channelCount > (channelMax - channelsCountRequiredForNewGame)) {
-            BotLogger.warning(new BotLogger.LogMessageOrigin(guild), "`CreateGameService.serverHasRoomForNewChannels` Cannot create new channels. Server **"
-                + guild.getName() + "** currently has " + channelCount + " channels.");
+        if (channelCount > (MAX_CHANNEL_COUNT - channelsCountRequiredForNewGame)) {
+            BotLogger.warning("`CreateGameService.serverHasRoomForNewChannels` Cannot create new channels. Server **"
+                    + guild.getName() + "** currently has " + channelCount + " channels.");
             return false;
         }
         return true;
@@ -552,17 +595,20 @@ public class CreateGameService {
             try {
                 int lowerBound = Integer.parseInt(StringUtils.substringBetween(category.getName(), "PBD #", "-"));
                 int upperBound = Integer.parseInt(
-                    StringUtils.substringBefore(StringUtils.substringAfter(category.getName(), "-"), " "));
+                        StringUtils.substringBefore(StringUtils.substringAfter(category.getName(), "-"), " "));
                 if (lowerBound <= gameNumber && gameNumber <= upperBound) {
                     return category.getName();
                 }
             } catch (Exception e) {
-                //BotLogger.warning("Could not parse integers within category name: " + category.getName(), e);
+                // BotLogger.warning("Could not parse integers within category name: " +
+                // category.getName(), e);
             }
         }
 
         // Derive a category name logically
-        int maxGamesPerCategory = Math.max(1, Math.min(25, GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.MAX_GAMES_PER_CATEGORY.toString(), Integer.class, 10)));
+        int settingForMaxGamePerCategory = GlobalSettings.getSetting(
+                GlobalSettings.ImplementedSettings.MAX_GAMES_PER_CATEGORY.toString(), Integer.class, 10);
+        int maxGamesPerCategory = Math.max(1, Math.min(25, settingForMaxGamePerCategory));
         int gameNumberMod = gameNumber % maxGamesPerCategory;
         int lowerBound = gameNumber - gameNumberMod;
         int upperBound = lowerBound + maxGamesPerCategory - 1;
@@ -576,7 +622,8 @@ public class CreateGameService {
     public static Category createNewCategory(String categoryName) {
         Guild guild = getServerWithMostCapacity();
         if (guild == null) {
-            BotLogger.warning("`CreateGameService.createNewCategory` No available servers to create a new game category");
+            BotLogger.warning(
+                    "`CreateGameService.createNewCategory` No available servers to create a new game category");
             return null;
         }
 
@@ -594,40 +641,36 @@ public class CreateGameService {
         Role everyoneRole = getRole("@everyone", guild);
         ChannelAction<Category> createCategoryAction = guild.createCategory(categoryName);
         if (bothelperRole != null)
-            createCategoryAction.addRolePermissionOverride(bothelperRole.getIdLong(), allow, null);
+            createCategoryAction =
+                    createCategoryAction.addRolePermissionOverride(bothelperRole.getIdLong(), allow, null);
         if (spectatorRole != null)
-            createCategoryAction.addRolePermissionOverride(spectatorRole.getIdLong(), allow, null);
+            createCategoryAction =
+                    createCategoryAction.addRolePermissionOverride(spectatorRole.getIdLong(), allow, null);
         if (everyoneRole != null)
-            createCategoryAction.addRolePermissionOverride(everyoneRole.getIdLong(), null, deny);
+            createCategoryAction = createCategoryAction.addRolePermissionOverride(everyoneRole.getIdLong(), null, deny);
         return createCategoryAction.complete();
     }
 
-    //TODO: Can this just be guild.getRolesByName?
+    // TODO: Can this just be guild.getRolesByName?
     public static Role getRole(String name, Guild guild) {
         return guild.getRoles().stream()
-            .filter(role -> role.getName().equalsIgnoreCase(name))
-            .findFirst()
-            .orElse(null);
+                .filter(role -> role.getName().equalsIgnoreCase(name))
+                .findFirst()
+                .orElse(null);
     }
 
     public static String getNewPlayerInfoText() {
         String path = ResourceHelper.getInstance().getHelpFile("NewPlayerIntro.txt");
         try {
-            return new String(Files.readAllBytes(Paths.get(path)));
+            return Files.readString(Paths.get(path));
         } catch (Exception e) {
             return "NewPlayerIntro HELP FILE IS BLANK";
         }
     }
 
     public static boolean isLockedFromCreatingGames(GenericInteractionCreateEvent event) {
-        Member member = event.getMember();
-        if (member != null) {
-            List<Role> roles = member.getRoles();
-            for (Role role : AsyncTI4DiscordBot.bothelperRoles) {
-                if (roles.contains(role)) {
-                    return false;
-                }
-            }
+        if (CommandHelper.hasRole(event, AsyncTI4DiscordBot.bothelperRoles)) {
+            return false;
         }
 
         var userSettings = UserSettingsManager.get(event.getUser().getId());
@@ -640,6 +683,7 @@ public class CreateGameService {
     }
 
     public static boolean isGameCreationAllowed() {
-        return GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.ALLOW_GAME_CREATION.toString(), Boolean.class, true);
+        return GlobalSettings.getSetting(
+                GlobalSettings.ImplementedSettings.ALLOW_GAME_CREATION.toString(), Boolean.class, true);
     }
 }
